[translation] po updates

--- a/po/ar.po
+++ b/po/ar.po
@@ -5,7 +5,7 @@ msgstr ""
 "Project-Id-Version: enigma2\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2012-09-28 16:57+0100\n"
-"PO-Revision-Date: 2012-07-11 17:33+0100\n"
+"PO-Revision-Date: 2012-09-30 00:53-0000\n"
 "Last-Translator: Andy Blackburn <andyblac@o2.co.uk>\n"
 "Language-Team: Arabic <moustafagamal@hotmail.com>\n"
 "Language: ar\n"
@@ -15,8 +15,6 @@ msgstr ""
 "Plural-Forms: nplurals=6; plural=n==0 ? 0 : n==1 ? 1 : n==2 ? 2 : n%100>=3 "
 "&& n%100<=10 ? 3 : n%100>=11 ? 4 : 5;\n"
 "X-Generator: Pootle 2.0.3\n"
-"X-Poedit-Language: Arabic\n"
-"X-Poedit-Country: EGYPT\n"
 "X-Poedit-SourceCharset: iso-8859-15\n"
 
 msgid ""
@@ -7003,8 +7001,7 @@ msgstr ""
 "من فضلك أضغط موافق للاستمرار ."
 
 msgid ""
-"Thank you for using the wizard. Your STB_BOX is now ready for "
-"use.\n"
+"Thank you for using the wizard. Your STB_BOX is now ready for use.\n"
 "Press OK to start using your receiver."
 msgstr ""
 
@@ -7020,8 +7017,8 @@ msgstr ""
 
 msgid ""
 "The DVD standard doesn't support H.264 (HDTV) video streams. Do you want to "
-"create a STB_BOX format data DVD (which will not play in stand-"
-"alone DVD players) instead?"
+"create a STB_BOX format data DVD (which will not play in stand-alone DVD "
+"players) instead?"
 msgstr ""
 "نظام دى فى دى القياسى لا يدعم الفيديو H.264 (HDTV) .هل تريد عمل نسق معلومات "
 "دى فى دى للدريم بوكس بدلا من ذلك (هذا لن يعمل فى مشغلات دى فى دى المستقله ) ؟"
@@ -7377,8 +7374,7 @@ msgstr ""
 
 msgid ""
 "This plugin creates a USB stick which can be used to update the firmware of "
-"your STB_BOX without the need for a network or WLAN "
-"connection.\n"
+"your STB_BOX without the need for a network or WLAN connection.\n"
 "First, a USB stick needs to be prepared so that it becomes bootable.\n"
 "In the next step, an NFI image file can be downloaded from the update server "
 "and saved on the USB stick.\n"
@@ -8289,9 +8285,8 @@ msgstr ""
 
 msgid ""
 "Welcome to the Image upgrade wizard. The wizard will assist you in upgrading "
-"the firmware of your STB_BOX by providing a backup facility for "
-"your current settings and a short explanation of how to upgrade your "
-"firmware."
+"the firmware of your STB_BOX by providing a backup facility for your current "
+"settings and a short explanation of how to upgrade your firmware."
 msgstr ""
 "مرحبا بك فى نافذة ترقية الصوره. هذه النافذه ستساعدك فى ترقية البرنامج "
 "التشغبلى للدريم بوكس بواسطة توفير وسيلة عمل نسخه إحتياطيه  للاعدادات الحاليه "
@@ -8301,9 +8296,8 @@ msgstr ""
 msgid ""
 "Welcome.\n"
 "\n"
-"If you want to connect your STB_BOX to the Internet, this "
-"wizard will guide you through the basic network setup of your GigaBlue HD "
-"800 Solo.\n"
+"If you want to connect your STB_BOX to the Internet, this wizard will guide "
+"you through the basic network setup of your GigaBlue HD 800 Solo.\n"
 "\n"
 "Press OK to start configuring your network"
 msgstr ""
@@ -8424,8 +8418,7 @@ msgstr ""
 msgid ""
 "When you do a factory reset, you will lose ALL your configuration data\n"
 "(including bouquets, services, satellite data ...)\n"
-"After completion of factory reset, your STB_BOX will restart "
-"automatically!\n"
+"After completion of factory reset, your STB_BOX will restart automatically!\n"
 "\n"
 "Really do a factory reset?"
 msgstr ""
@@ -8642,11 +8635,11 @@ msgid "You have to wait %s!"
 msgstr "يجب أن تنتظر %s !"
 
 msgid ""
-"You need a PC connected to your STB_BOX. If you need further "
-"instructions, please visit the website http://www.dm7025.de.\n"
-"Your STB_BOX will now be halted. After you have performed the "
-"update instructions from the website, your new firmware will ask you to "
-"restore your settings."
+"You need a PC connected to your STB_BOX. If you need further instructions, "
+"please visit the website http://www.dm7025.de.\n"
+"Your STB_BOX will now be halted. After you have performed the update "
+"instructions from the website, your new firmware will ask you to restore "
+"your settings."
 msgstr ""
 "تحتاج الى كومبيوتر متصل بالدريم بوكس، لمزيد من الارشادات نرجو زيارة "
 "الموقعhttp://www.dm7025.de \n"
@@ -8657,8 +8650,8 @@ msgid "You system does not support ext4"
 msgstr ""
 
 msgid ""
-"Your STB_BOX is not connected to the internet, please check "
-"your network settings and try again."
+"Your STB_BOX is not connected to the internet, please check your network "
+"settings and try again."
 msgstr ""
 
 msgid ""
@@ -8695,26 +8688,24 @@ msgid "Your STB_BOX is shutting down. Please stand by..."
 msgstr "يتم الان إغلاق الدريم بوكس. من فضلك كن مستعدا..."
 
 msgid ""
-"Your STB_BOX isn't connected to the internet properly. Please "
-"check it and try again."
+"Your STB_BOX isn't connected to the internet properly. Please check it and "
+"try again."
 msgstr ""
 "الدريم بوكس غير متصل بالانترنت بشكل صحيح. من فضلكأفحصه وحاول مره ثانيه."
 
 msgid ""
-"Your STB_BOX might be unusable now. Please consult the manual "
-"for further assistance before rebooting your STB_BOX."
+"Your STB_BOX might be unusable now. Please consult the manual for further "
+"assistance before rebooting your STB_BOX."
 msgstr ""
 
 #, python-format
 msgid ""
-"Your STB_BOX will be restarted after the installation of "
-"service\n"
+"Your STB_BOX will be restarted after the installation of service\n"
 "Ready to install \"%s\" ?"
 msgstr ""
 
 msgid ""
-"Your STB_BOX will be restarted after the installation of "
-"service.\n"
+"Your STB_BOX will be restarted after the installation of service.\n"
 "\n"
 "Do you want to install now ?"
 msgstr ""
@@ -10300,529 +10291,3 @@ msgstr "الانتقال"
 
 msgid "zapped"
 msgstr "تم الانتقال"
-
-#
-#~ msgid ""
-#~ "\n"
-#~ "System will restart after the restore!"
-#~ msgstr ""
-#~ "\n"
-#~ "سيتم عمل إعادة تشغيل بعد الاستعاده !"
-
-#
-#~ msgid "Action:"
-#~ msgstr "العمل"
-
-#
-#~ msgid "Add WLAN configuration?"
-#~ msgstr "إضافة إعدادات شبكه واسعه"
-
-#
-#~ msgid "Add network configuration?"
-#~ msgstr "إضافه إعدادات شبكه ؟"
-
-#
-#~ msgid "Adds network configuration if enabled."
-#~ msgstr "يضيف تكوينات شبكه إذا كانت مفعله"
-
-#
-#~ msgid "Adds wlan configuration if enabled."
-#~ msgstr "يضيف تكوينات شبكه واسعه إذا كانت مفعله"
-
-#
-#~ msgid "Advanced Video Setup"
-#~ msgstr "إعدادات فيديو متقدمه"
-
-#~ msgid ""
-#~ "After the start wizard is completed, you need to protect single services. "
-#~ "Refer to your STB_BOX's manual on how to do that."
-#~ msgstr ""
-#~ "إذا أردت حمايه خدمه واحده بعد انتهاء نافذه البدأأرجع الى دليل المستخدم "
-#~ "لتعرف كيف تفعل ذلك"
-
-#
-#~ msgid "All Satellites"
-#~ msgstr "كل الاقمار"
-
-#
-#~ msgid "Always ask before sending"
-#~ msgstr "اسأل دائما قبل الارسال"
-
-#~ msgid ""
-#~ "Are you sure you want to delete\n"
-#~ "following backup:\n"
-#~ msgstr ""
-#~ "هل أنت متأكد أنك تريد مسحالنسخه الاحتياطيه الاتيه:\n"
-#~ "\n"
-
-#~ msgid ""
-#~ "Are you sure you want to restore\n"
-#~ "following backup:\n"
-#~ msgstr ""
-#~ "هل أنت متاكد إنك تريد إستعادة\n"
-#~ "النسخه الاحتياطيه التاليه:\n"
-
-#~ msgid ""
-#~ "Are you sure you want to restore your Enigma2 backup?\n"
-#~ "Enigma2 will restart after the restore"
-#~ msgstr ""
-#~ "هل أنت متأكد أنك تريد إستعادة بالك أب الاينجما2 ؟\n"
-#~ "سيتم عمل إعادة تشغيل الاينجما2 بعد الاستعاده"
-
-#~ msgid "Ask before shutdown:"
-#~ msgstr "أسأل قبل الاغلاق"
-
-#~ msgid "Backup done."
-#~ msgstr "تم عمل نسخه إحتياطيه "
-
-#~ msgid ""
-#~ "By pressing the OK Button on your remote control, the info bar is being "
-#~ "displayed."
-#~ msgstr "بالضغط على ذر موافق من الريموت كونترول ، سيظهر شريط المعلومات"
-
-#
-#~ msgid "Cleanup Wizard"
-#~ msgstr "نافذة التنظيف"
-
-#~ msgid "Cleanup Wizard settings"
-#~ msgstr "إعدادات نافذة التنظيف"
-
-#~ msgid "CleanupWizard"
-#~ msgstr "نافذة التنظيف"
-
-#~ msgid "Crashlog settings"
-#~ msgstr "إعدادات سجل العطب"
-
-#
-#~ msgid "CrashlogAutoSubmit"
-#~ msgstr "الارسال الالى لسجل العطب"
-
-#
-#~ msgid "CrashlogAutoSubmit settings"
-#~ msgstr "إعدادات الارسال الالى لسجل العطب"
-
-#
-#~ msgid "CrashlogAutoSubmit settings..."
-#~ msgstr "إعدادات الارسال الالى لسجل العطب..."
-
-#~ msgid ""
-#~ "Crashlogs found!\n"
-#~ "Send them to Dream Multimedia?"
-#~ msgstr ""
-#~ "تم العثور على سجل عطب!\n"
-#~ "هل تريد إرساله الى دريم مالتيميديا ؟"
-
-#~ msgid "Decide if you want to enable or disable the Cleanup Wizard."
-#~ msgstr "قرر إذا كنت تريد تشغيل أو تعطيل نافذة إعدادات التنظيف."
-
-#
-#~ msgid "Decide what should be done when crashlogs are found."
-#~ msgstr "قرر ماذا يجب أن يحدث عند وجود سجل عطب ."
-
-#~ msgid "Decide what should happen to the crashlogs after submission."
-#~ msgstr "قرر مصير سجل العطب بعد إرساله."
-
-#~ msgid "Delete crashlogs"
-#~ msgstr "مسح سجل العطب"
-
-#~ msgid ""
-#~ "Delete no more configured satellite\n"
-#~ "%s?"
-#~ msgstr ""
-#~ "مسح الاقمار الغير مهيأه \n"
-#~ "%s ؟"
-
-#
-#~ msgid "Disable crashlog reporting"
-#~ msgstr "تعطيل التبليغ عن سجل عطب"
-
-#
-#~ msgid "Disable timer"
-#~ msgstr "تعطيل المؤقت"
-
-#~ msgid "Display Setup"
-#~ msgstr "إعدادات العرض"
-
-#~ msgid ""
-#~ "Do you want to enable the parental control feature on your GigaBlue HD "
-#~ "800 Solo?"
-#~ msgstr "هل تريد تفعيل خاصية التحكم الابوى فى الدريم بوكس ؟"
-
-#
-#~ msgid ""
-#~ "Do you want to submit your email address and name so that we can contact "
-#~ "you if needed?"
-#~ msgstr "هل تريد وضع أسمك وبريدك الالكترونى ليتم الاتصال بكعند الحاجه ؟"
-
-#~ msgid ""
-#~ "Do you want to update your STB_BOX?\n"
-#~ "After pressing OK, please wait!"
-#~ msgstr ""
-#~ "هل تريد تحديث الدريم بوكس؟\n"
-#~ "بعد أن تضغط موافق ، من فضلك إنتظر !"
-
-#
-#~ msgid "Do you want to view a tutorial?"
-#~ msgstr "هل تريد مشاهده الشرح ؟"
-
-#~ msgid "Don't ask, just send"
-#~ msgstr "لا تسأل ، فقط أرسل"
-
-#~ msgid "Done - Installed or upgraded %d packages"
-#~ msgstr "تم - تثبيت أو تحديث %d الرزم"
-
-#~ msgid "Enable Cleanup Wizard?"
-#~ msgstr "تفعيل نافذة التنظيف ؟"
-
-#~ msgid "Enter your email address so that we can contact you if needed."
-#~ msgstr "أدخل عنوان بريدك الألكترونى ليتم الاتصال بك عند الحاجه."
-
-#~ msgid "Exit the cleanup wizard"
-#~ msgstr "خروج من نافذة إعدادات التنظيف"
-
-#~ msgid "How to handle found crashlogs?"
-#~ msgstr "كيف أتعامل من سجل العطب"
-
-#
-#~ msgid "Include your email and name (optional) in the mail?"
-#~ msgstr "تضمين بريدك الالكترونى (إختيارى) فى البريد ؟ "
-
-#~ msgid "Install settings, skins, software..."
-#~ msgstr "تثبيت إعدادات، جلد ، برامج...."
-
-#~ msgid "Installing default sat lists... Please wait..."
-#~ msgstr "تثبيت قوائم الأقمار الأفتراضيه... رجاء الانتظار.."
-
-#~ msgid "Installing defaults... Please wait..."
-#~ msgstr "جارى تثبيت الافتراضيات ... رجاء الأنتظار..."
-
-#~ msgid "Installing package content... Please wait..."
-#~ msgstr "جارى تثبيت محتويات الرزمه ... رجاء الأنتظار..."
-
-#
-#~ msgid "Is this videomode ok?"
-#~ msgstr "هل توافق على وضعية الفيديو هذه؟"
-
-#
-#~ msgid "Keyboard Setup"
-#~ msgstr "ضبط لوحه المفاتيح"
-
-#
-#~ msgid "Mode"
-#~ msgstr "وضعيه"
-
-#
-#~ msgid ""
-#~ "No packages were upgraded yet. So you can check your network and try "
-#~ "again."
-#~ msgstr "لم تتم ترقيه أى باقه بعد . تأكد من الشبكه وأعد المحاوله"
-
-#~ msgid "No, not now"
-#~ msgstr "لا ، ليس الان"
-
-#~ msgid "OK, remove another extensions"
-#~ msgstr "موافق، أحذف إضافات اخرى"
-
-#~ msgid "OK, remove some extensions"
-#~ msgstr "موافق، أحذف بعض الاضافات"
-
-#~ msgid "Optionally enter your name if you want to."
-#~ msgstr "أدخل اسم إذا كنت ترغب فى ذلك - إختيارى-"
-
-#~ msgid "Package removal failed.\n"
-#~ msgstr "فشل حذف الرزمه \n"
-
-#~ msgid "Package removed successfully.\n"
-#~ msgstr "تم حذف الرزمه بنجاح \n"
-
-#~ msgid "Please choose he package..."
-#~ msgstr "من فضلك اختار رزمه..."
-
-#~ msgid "Please choose the default services lists you want to install."
-#~ msgstr "من فضلك أختار قوائم القنوات الافتراضيه التى تريد تثبيتها."
-
-#~ msgid "Please enter your email address here:"
-#~ msgstr "من فضلك أدخل بريدك الالكترونى هنا:"
-
-#~ msgid "Please enter your name here (optional):"
-#~ msgstr "من فضلك أدخل اسمك هنا (إختيارى):"
-
-#
-#~ msgid "Please press OK!"
-#~ msgstr "من فضلك اضغط موافق"
-
-#~ msgid "Please select an extension to remove."
-#~ msgstr "من فضلك أختار الاضافه المطلوب حذفها"
-
-#
-#~ msgid "Please select an option below."
-#~ msgstr "من فضلك حدد إختيارا من التالى :"
-
-#~ msgid "Please wait while removing selected package..."
-#~ msgstr "رجاء الانتظار حتى يتم حذف الرزم المختاره"
-
-#~ msgid "Please wait while searching for removable packages..."
-#~ msgstr "رجاء الانتظار جارى البحث عن الرزم المحذوفه..."
-
-#~ msgid "Refresh Rate"
-#~ msgstr "معدل الأنعاش"
-
-#~ msgid "Remove failed."
-#~ msgstr "فشل الحذف"
-
-#~ msgid "Removed successfully."
-#~ msgstr "تم الحذف بنجاح ."
-
-#~ msgid "Rename crashlogs"
-#~ msgstr "إعادة تسمية سجلات العطب"
-
-#~ msgid "Restore running"
-#~ msgstr "إستعادة التنفيذ"
-
-#
-#~ msgid "Sat / Dish Setup"
-#~ msgstr "ضبط القمر/طبق الاستقبال"
-
-#~ msgid "Scan QAM128"
-#~ msgstr "بحث QAM128"
-
-#~ msgid "Scan QAM16"
-#~ msgstr "بحث QAM16"
-
-#~ msgid "Scan QAM256"
-#~ msgstr "بحث QAM256"
-
-#~ msgid "Scan QAM32"
-#~ msgstr "بحث QAM32"
-
-#~ msgid "Scan QAM64"
-#~ msgstr "بحث QAM64"
-
-#~ msgid "Scan SR6875"
-#~ msgstr "بحث SR6875"
-
-#~ msgid "Scan SR6900"
-#~ msgstr "بحث SR6900"
-
-#~ msgid "Select package"
-#~ msgstr "أختار رزمه"
-
-#
-#~ msgid "Service Searching"
-#~ msgstr "بحث عن القنـوات"
-
-#
-#~ msgid "Set Voltage and 22KHz"
-#~ msgstr "ضبط الفولتيه و 22KHz"
-
-#
-#~ msgid "Set available internal memory threshold for the warning."
-#~ msgstr "أضبط أقل مستوى للذاكره الداخليه للتنبيه"
-
-#
-#~ msgid "Shutdown STB_BOX after"
-#~ msgstr "إغلاق الدريم بوكس بعد"
-
-#~ msgid "Sleep timer action:"
-#~ msgstr "عمل مؤقت النوم :"
-
-#~ msgid "Sorry no backups found!"
-#~ msgstr "عفوا.. لم يتم العثور على أى نسخه إحتياطيه !"
-
-#~ msgid ""
-#~ "Sorry your backup destination is not writeable.\n"
-#~ "Please choose an other one."
-#~ msgstr ""
-#~ "المكان الذى تريد وضع النسخه الاحتياطيه فيه لا يمكن الكتابه عليه \n"
-#~ "من فضلك أختار مكان آخر."
-
-#
-#~ msgid "Sorry, no Details available!"
-#~ msgstr "عفوا ، لا يوجد تفاصيل متاحه !"
-
-#~ msgid ""
-#~ "Sorry, your backup destination is not writeable.\n"
-#~ "\n"
-#~ "Please choose another one."
-#~ msgstr ""
-#~ "عفوا، المكان الذى تريد وضع النسخه الاحتياطيه فيه لا يمكن الكتابه عليه \n"
-#~ "\n"
-#~ "من فضلك أختار مكان آخر."
-
-#~ msgid ""
-#~ "Thank you for using the wizard. Your STB_BOX is now ready to "
-#~ "use.\n"
-#~ "Please press OK to start using your STB_BOX."
-#~ msgstr ""
-#~ "شكرا لأستخدامك نافذة الاعدادات . الدريم بوكس جاهز الا للاستخدام. \n"
-#~ "من فضلك أضغط موافق لتبدأ استخدام الدريم بوكس."
-
-#
-#~ msgid "The installation of the default services lists is finished."
-#~ msgstr "تم الانتهاء من تثبيت قوائم القنوات الافتراضيه"
-
-#~ msgid ""
-#~ "The installation of the default settings is finished. You can now "
-#~ "continue configuring your STB_BOX by pressing the OK button "
-#~ "on the remote control."
-#~ msgstr ""
-#~ "تم تثبيت الاعدادات الافتراضيه . يمكنك الان استكمال تهيئة الدريم بوكس "
-#~ "بالضغط على ذر موافق من الريموت كونترول ."
-
-#~ msgid "The package doesn't contain anything."
-#~ msgstr "الرزمه لا تحتوى على أى شيئ ."
-
-#~ msgid "The package:"
-#~ msgstr "الرزمه:"
-
-#~ msgid "There are no default services lists in your image."
-#~ msgstr "لا يوجد قائمة قنوات إفتراضيه فى هذه الصوره ."
-
-#~ msgid "There are no default settings in your image."
-#~ msgstr "لا يوجد إعدادات إفتراضيه فى هذه الصوره"
-
-#~ msgid "There are now "
-#~ msgstr "يوجد الان"
-
-#
-#~ msgid "There was an error downloading the packetlist. Please try again."
-#~ msgstr "حدث خطا اثناء تحميل قائمة الحزم. من فضلك حاول ثانيه"
-
-#
-#~ msgid "There was an error. The package:"
-#~ msgstr "حدث خطأ. الرزمه:"
-
-#
-#~ msgid "This is step number 2."
-#~ msgstr "هذه هى الخطوه رقم 2"
-
-#
-#~ msgid "Tone Amplitude"
-#~ msgstr "مدى النغمه"
-
-#
-#~ msgid "Tuner "
-#~ msgstr "موالف"
-
-#~ msgid "Updating finished. Here is the result:"
-#~ msgstr "إنتهاء التحديث، وهذه هى النتيجه:"
-
-#~ msgid "Updating... Please wait... This can take some minutes..."
-#~ msgstr "جارى التحديث ..انتظر..قد يستغرق بعض الوقت..."
-
-#~ msgid "Upgrading STB_BOX... Please wait"
-#~ msgstr "جارى ترقية الدريم بوكس ... رجاء الانتظار"
-
-#~ msgid "Use Power Measurement"
-#~ msgstr "استخدم قياس الطاقه"
-
-#~ msgid ""
-#~ "Use the left and right buttons to change an option.\n"
-#~ "\n"
-#~ "Please set up tuner A"
-#~ msgstr ""
-#~ "استخد الذر الايمن والايسر للاختيار\n"
-#~ "\n"
-#~ "من فضلك أضبط الموالف أ"
-
-#
-#~ msgid "Use usals for this sat"
-#~ msgstr "USALS für diesen Sat benutzen"
-
-#
-#~ msgid "Video Fine-Tuning Wizard"
-#~ msgstr "نافذة الضبط الدقيق للفيديو"
-
-#
-#~ msgid "Video Output"
-#~ msgstr "مخرج الفيديو"
-
-#
-#~ msgid "Video Setup"
-#~ msgstr "ضبط الفيديو"
-
-#
-#~ msgid "Video Wizard"
-#~ msgstr "نافذة إعدادات الفيديو"
-
-#
-#~ msgid "Warn if free space drops below (kB):"
-#~ msgstr "حذرنى إذا قلت المساحه عن (kB) :"
-
-#~ msgid ""
-#~ "Welcome.\n"
-#~ "\n"
-#~ "This start wizard will guide you through the basic setup of your Xtrend "
-#~ "ET9.\n"
-#~ "Press the OK button on your remote control to move to the next step."
-#~ msgstr ""
-#~ "اهلا وسهلا\n"
-#~ "\n"
-#~ "هذه النوافذ سترشدك لعمل الضبط وتهيئه الدريم بوكس اضغط ذر OK من الريموت "
-#~ "للانتقال للخطوه التاليه"
-
-#~ msgid "Yes, and don't ask again"
-#~ msgstr "نعم ، ولا تسأل بعد ذلك"
-
-#
-#~ msgid "Yes, view the tutorial"
-#~ msgstr "مشاهده الشرح"
-
-#~ msgid ""
-#~ "You can choose some default settings now. Please select the settings you "
-#~ "want to be installed."
-#~ msgstr ""
-#~ "تستطيع أختيار بعض الاعدادات الافتراضيه . من فضلك أختار الاعدادات التى "
-#~ "تريد تثبيتها ."
-
-#~ msgid "You can choose, what you want to install..."
-#~ msgstr "تستطيع أن تختار . ماذا تريد أن تثبت......"
-
-#~ msgid "You chose not to install any default services lists."
-#~ msgstr "لقد أخترت عدم تثبيت قوائم القنوات الافتراضيه"
-
-#~ msgid ""
-#~ "You chose not to install any default settings. You can however install "
-#~ "the default settings later in the settings menu."
-#~ msgstr ""
-#~ "لقد أخترت عدم تثبيت الاعدادات الافتراضيه ، لكن يمكنك تثبيتها لاحقا من "
-#~ "قائمة الاعدادات"
-
-#~ msgid ""
-#~ "You chose not to install anything. Please press OK finish the install "
-#~ "wizard."
-#~ msgstr "لقد أخترت عدم تثبيت أى شيئ ، من فضلك أغط موافق لأغلاق نافذة التثبيت"
-
-#~ msgid "Your email address:"
-#~ msgstr "عنوان بريدك الالكترونى:"
-
-#~ msgid "Your name (optional):"
-#~ msgstr "إسمك (إختيارى):"
-
-#~ msgid "alphabetic sort"
-#~ msgstr "ترنيب أبجدى"
-
-#~ msgid "available"
-#~ msgstr "متاح"
-
-#~ msgid "could not be removed"
-#~ msgstr "لا يمكن حذفها"
-
-#~ msgid "shutdown"
-#~ msgstr "إغلاق"
-
-#~ msgid "sort by date"
-#~ msgstr "تصنيف حسب التاريخ"
-
-#~ msgid "standby"
-#~ msgstr "وضع الاستعداد"
-
-#~ msgid "was removed successfully"
-#~ msgstr "تم الحذف بنجاح"
-
-#~ msgid ""
-#~ "your STB_BOX might be unusable now. Please consult the "
-#~ "manual for further assistance before rebooting your STB_BOX."
-#~ msgstr ""
-#~ "الدريم بوكس غير مستقر الان ، من فضلك راجع دليل المستخدم للمساعده قبل "
-#~ "إعادة التشغيل"
