--- a/po/bg.po
+++ b/po/bg.po
@@ -3,10 +3,9 @@ msgstr ""
 "Project-Id-Version: tuxbox-enigma 0.0.1\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2012-09-28 16:57+0100\n"
-"PO-Revision-Date: 2012-09-14 19:14-0000\n"
+"PO-Revision-Date: 2012-09-30 00:53-0000\n"
 "Last-Translator: Andy Blackburn <andyblac@o2.co.uk>\n"
 "Language-Team: Bulgarian\n"
-"Language: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -6556,8 +6555,7 @@ msgstr ""
 "Натиснете ОК за да продължите."
 
 msgid ""
-"Thank you for using the wizard. Your STB_BOX is now ready for "
-"use.\n"
+"Thank you for using the wizard. Your STB_BOX is now ready for use.\n"
 "Press OK to start using your receiver."
 msgstr ""
 
@@ -6573,8 +6571,8 @@ msgstr ""
 
 msgid ""
 "The DVD standard doesn't support H.264 (HDTV) video streams. Do you want to "
-"create a STB_BOX format data DVD (which will not play in stand-"
-"alone DVD players) instead?"
+"create a STB_BOX format data DVD (which will not play in stand-alone DVD "
+"players) instead?"
 msgstr ""
 
 msgid ""
@@ -6912,8 +6910,7 @@ msgstr ""
 
 msgid ""
 "This plugin creates a USB stick which can be used to update the firmware of "
-"your STB_BOX without the need for a network or WLAN "
-"connection.\n"
+"your STB_BOX without the need for a network or WLAN connection.\n"
 "First, a USB stick needs to be prepared so that it becomes bootable.\n"
 "In the next step, an NFI image file can be downloaded from the update server "
 "and saved on the USB stick.\n"
@@ -7741,9 +7738,8 @@ msgstr ""
 
 msgid ""
 "Welcome to the Image upgrade wizard. The wizard will assist you in upgrading "
-"the firmware of your STB_BOX by providing a backup facility for "
-"your current settings and a short explanation of how to upgrade your "
-"firmware."
+"the firmware of your STB_BOX by providing a backup facility for your current "
+"settings and a short explanation of how to upgrade your firmware."
 msgstr ""
 "Добре дошли при помощника за ъпгред на имиджа. Помощника ще ви помогне при "
 "ъпгрейдването firmware на вашия Clarke-Tech осигурявайки backup за вашите "
@@ -7752,9 +7748,8 @@ msgstr ""
 msgid ""
 "Welcome.\n"
 "\n"
-"If you want to connect your STB_BOX to the Internet, this "
-"wizard will guide you through the basic network setup of your GigaBlue HD "
-"800 Solo.\n"
+"If you want to connect your STB_BOX to the Internet, this wizard will guide "
+"you through the basic network setup of your GigaBlue HD 800 Solo.\n"
 "\n"
 "Press OK to start configuring your network"
 msgstr ""
@@ -7872,8 +7867,7 @@ msgstr ""
 msgid ""
 "When you do a factory reset, you will lose ALL your configuration data\n"
 "(including bouquets, services, satellite data ...)\n"
-"After completion of factory reset, your STB_BOX will restart "
-"automatically!\n"
+"After completion of factory reset, your STB_BOX will restart automatically!\n"
 "\n"
 "Really do a factory reset?"
 msgstr ""
@@ -8085,19 +8079,19 @@ msgid "You have to wait %s!"
 msgstr "Трябва да изчакате %s!"
 
 msgid ""
-"You need a PC connected to your STB_BOX. If you need further "
-"instructions, please visit the website http://www.dm7025.de.\n"
-"Your STB_BOX will now be halted. After you have performed the "
-"update instructions from the website, your new firmware will ask you to "
-"restore your settings."
+"You need a PC connected to your STB_BOX. If you need further instructions, "
+"please visit the website http://www.dm7025.de.\n"
+"Your STB_BOX will now be halted. After you have performed the update "
+"instructions from the website, your new firmware will ask you to restore "
+"your settings."
 msgstr ""
 
 msgid "You system does not support ext4"
 msgstr ""
 
 msgid ""
-"Your STB_BOX is not connected to the internet, please check "
-"your network settings and try again."
+"Your STB_BOX is not connected to the internet, please check your network "
+"settings and try again."
 msgstr ""
 
 msgid ""
@@ -8125,25 +8119,23 @@ msgid "Your STB_BOX is shutting down. Please stand by..."
 msgstr ""
 
 msgid ""
-"Your STB_BOX isn't connected to the internet properly. Please "
-"check it and try again."
+"Your STB_BOX isn't connected to the internet properly. Please check it and "
+"try again."
 msgstr ""
 
 msgid ""
-"Your STB_BOX might be unusable now. Please consult the manual "
-"for further assistance before rebooting your STB_BOX."
+"Your STB_BOX might be unusable now. Please consult the manual for further "
+"assistance before rebooting your STB_BOX."
 msgstr ""
 
 #, python-format
 msgid ""
-"Your STB_BOX will be restarted after the installation of "
-"service\n"
+"Your STB_BOX will be restarted after the installation of service\n"
 "Ready to install \"%s\" ?"
 msgstr ""
 
 msgid ""
-"Your STB_BOX will be restarted after the installation of "
-"service.\n"
+"Your STB_BOX will be restarted after the installation of service.\n"
 "\n"
 "Do you want to install now ?"
 msgstr ""
@@ -9631,416 +9623,3 @@ msgstr "превключи"
 
 msgid "zapped"
 msgstr "превключен"
-
-#~ msgid "/usr/share/enigma2 directory"
-#~ msgstr "/usr/share/enigma2 директория"
-
-#~ msgid "/var directory"
-#~ msgstr "/var директория"
-
-#~ msgid "Add WLAN configuration?"
-#~ msgstr "Добавяне настройки за WLAN?"
-
-#~ msgid "Add network configuration?"
-#~ msgstr "Добавяне мрежови настройки?"
-
-#~ msgid "Advanced Video Setup"
-#~ msgstr "Експертна Видео Настройка"
-
-#~ msgid "All Satellites"
-#~ msgstr "Всички Сателити"
-
-#~ msgid "Always ask before sending"
-#~ msgstr "Винаги питай преди изпращане"
-
-#~ msgid "Anonymize crashlog?"
-#~ msgstr "Анонимен crashlog?"
-
-#~ msgid ""
-#~ "Are you sure you want to delete\n"
-#~ "following backup:\n"
-#~ msgstr ""
-#~ "Искате ли да изтриете\n"
-#~ "този backup:\n"
-
-#~ msgid ""
-#~ "Are you sure you want to restore\n"
-#~ "following backup:\n"
-#~ msgstr ""
-#~ "Искате ли да възстановите\n"
-#~ "следния backup:\n"
-
-#~ msgid ""
-#~ "Are you sure you want to restore your Enigma2 backup?\n"
-#~ "Enigma2 will restart after the restore"
-#~ msgstr ""
-#~ "Искате ли да възстановите вашия Енигма2 backup?\n"
-#~ "Енигма2 ще се рестартира след възстановяването"
-
-#~ msgid "Backup Mode"
-#~ msgstr "Backup Режим"
-
-#~ msgid "Backup done."
-#~ msgstr "Backup завършен."
-
-#~ msgid ""
-#~ "By pressing the OK Button on your remote control, the info bar is being "
-#~ "displayed."
-#~ msgstr "С натискане бутон OK на дистанционното, инфо лентата се показва."
-
-#~ msgid "Cleanup Wizard"
-#~ msgstr "Помощник за Почистване"
-
-#~ msgid "Crashlog settings"
-#~ msgstr "Crashlog настройки"
-
-#~ msgid "CrashlogAutoSubmit"
-#~ msgstr "CrashlogAutoSubmit"
-
-#~ msgid "CrashlogAutoSubmit settings"
-#~ msgstr "CrashlogAutoSubmit настройки"
-
-#~ msgid "CrashlogAutoSubmit settings..."
-#~ msgstr "Настройки CrashlogAutoSubmit..."
-
-#~ msgid "Decide what should be done when crashlogs are found."
-#~ msgstr "Определете какво да се направи при открит crashlog."
-
-#~ msgid "Decide what should happen to the crashlogs after submission."
-#~ msgstr "Определете какво да се прави с crashlogs след подаването им."
-
-#~ msgid "Delete crashlogs"
-#~ msgstr "Изтриване на crashlog"
-
-#~ msgid ""
-#~ "Delete no more configured satellite\n"
-#~ "%s?"
-#~ msgstr ""
-#~ "Изтриване на вече не конфигурирания сателит\n"
-#~ "%s?"
-
-#~ msgid "Disable crashlog reporting"
-#~ msgstr "Спри изпращането на crashlogs"
-
-#~ msgid ""
-#~ "Do you want to backup now?\n"
-#~ "After pressing OK, please wait!"
-#~ msgstr ""
-#~ "Искате ли да съхраните копие сега?\n"
-#~ "След натискане OK, моля изчакайте!"
-
-#~ msgid ""
-#~ "Do you want to submit your email address and name so that we can contact "
-#~ "you if needed?"
-#~ msgstr ""
-#~ "Искате ли да изпратите ваши данни(име и email) за да се свържем с вас при "
-#~ "нужда?"
-
-#~ msgid ""
-#~ "Do you want to update your STB_BOX?\n"
-#~ "After pressing OK, please wait!"
-#~ msgstr ""
-#~ "Искате ли да актуализирате вашия Clarke-Tech?\n"
-#~ "След натискане OK, моля изчакайте!"
-
-#~ msgid "Do you want to view a tutorial?"
-#~ msgstr "Искате ли да видите упътване?"
-
-#~ msgid "Don't ask, just send"
-#~ msgstr "Не питай, просто изпращай"
-
-#~ msgid "Done - Installed or upgraded %d packages"
-#~ msgstr "Готово - Инсталирани или ъпгрейднати %d пакета"
-
-#~ msgid "Enter your email address so that we can contact you if needed."
-#~ msgstr "Въведете вашия e-mail адрес за да се свържем с вас при нужда."
-
-#~ msgid "Exit the cleanup wizard"
-#~ msgstr "Изход от помощника за почистване"
-
-#~ msgid "General AC3 Delay"
-#~ msgstr "AC3 закъснение"
-
-#~ msgid "General PCM Delay"
-#~ msgstr "PCM закъснение"
-
-#~ msgid "How to handle found crashlogs?"
-#~ msgstr "Какво да правя с crashlogs?"
-
-#~ msgid "Include your email and name (optional) in the mail?"
-#~ msgstr "Включване на вашето име и email(по избор)в пощата?"
-
-#~ msgid "Install settings, skins, software..."
-#~ msgstr "Инсталация настройки, кожи, софтуер..."
-
-#~ msgid "Installing default sat lists... Please wait..."
-#~ msgstr "Инсталиране стандартни сат листи... Моля изчакайте..."
-
-#~ msgid "Installing defaults... Please wait..."
-#~ msgstr "Инсталация стандартни... Моля изчакайте..."
-
-#~ msgid "Installing package content... Please wait..."
-#~ msgstr "Инсталиране package content... Моля изчакайте..."
-
-#~ msgid "Is this videomode ok?"
-#~ msgstr "Този видео режим коректен ли е?"
-
-#~ msgid "Mode"
-#~ msgstr "Режим"
-
-#~ msgid ""
-#~ "No packages were upgraded yet. So you can check your network and try "
-#~ "again."
-#~ msgstr "Няма ъпгрейднати пакети. Проверете мрежата и опитайте отново."
-
-#~ msgid "No, not now"
-#~ msgstr "Не, не сега."
-
-#~ msgid "No, send them never"
-#~ msgstr "Не, никога не изпращай."
-
-#~ msgid "Optionally enter your name if you want to."
-#~ msgstr "Въведете вашето име ако желаете."
-
-#~ msgid "Package removal failed.\n"
-#~ msgstr "Грешка при премахване на пакет!\n"
-
-#~ msgid "Package removed successfully.\n"
-#~ msgstr "Пакетът е премахнат успешно.\n"
-
-#~ msgid "Please choose he package..."
-#~ msgstr "Mоля изберете пакет..."
-
-#~ msgid "Please choose the default services lists you want to install."
-#~ msgstr "Моля изберете стандартни листи с канали които да се инсталират."
-
-#~ msgid "Please enter your email address here:"
-#~ msgstr "Моля въведете вашия email адрес тук:"
-
-#~ msgid "Please enter your name here (optional):"
-#~ msgstr "Моля въведете вашето име тук (по избор):"
-
-#~ msgid "Please press OK!"
-#~ msgstr "Моля натиснете ОК!"
-
-#~ msgid "Please select an option below."
-#~ msgstr "Моля изберете някоя от опциите по долу."
-
-#~ msgid "Please wait while removing selected package..."
-#~ msgstr "Моля изчакайте премахването на пакета..."
-
-#~ msgid "Please wait while searching for removable packages..."
-#~ msgstr "Моля изчакайте докато търся пакети за премахване..."
-
-#~ msgid "Refresh Rate"
-#~ msgstr "Честота на Обновяване"
-
-#~ msgid "Remove failed."
-#~ msgstr "Грешка при премахването!"
-
-#~ msgid "Removed successfully."
-#~ msgstr "Успешно премахване."
-
-#~ msgid "Rename crashlogs"
-#~ msgstr "Преименувай crashlog"
-
-#~ msgid "Restore running"
-#~ msgstr "Възстановяване"
-
-#~ msgid "Select package"
-#~ msgstr "Изберете пакет"
-
-#~ msgid "Sorry MediaScanner is not installed!"
-#~ msgstr "MediaScanner не е инсталиран!"
-
-#~ msgid "Sorry no backups found!"
-#~ msgstr "Съжалявам, не са открити backups!"
-
-#~ msgid ""
-#~ "Sorry your Backup destination does not exist\n"
-#~ "\n"
-#~ "Please choose an other one."
-#~ msgstr ""
-#~ "Съжалявам, вашата Backup дестинация не съществува\n"
-#~ "\n"
-#~ "Моля изберете друга."
-
-#~ msgid ""
-#~ "Sorry your backup destination is not writeable.\n"
-#~ "Please choose an other one."
-#~ msgstr ""
-#~ "Съжалявам, не може да се записва във вашата Backup дестинация.\n"
-#~ "Моля изберете друга."
-
-#~ msgid "Sorry, no Details available!"
-#~ msgstr "Съжалявам, няма налични детайли!"
-
-#~ msgid ""
-#~ "Sorry, your backup destination is not writeable.\n"
-#~ "\n"
-#~ "Please choose another one."
-#~ msgstr ""
-#~ "Съжалявам, не може да се записва във вашата Backup дестинация.\n"
-#~ "\n"
-#~ "Моля изберете друга."
-
-#~ msgid ""
-#~ "Thank you for using the wizard. Your STB_BOX is now ready to "
-#~ "use.\n"
-#~ "Please press OK to start using your STB_BOX."
-#~ msgstr ""
-#~ "Благодаря ви,че използвахте помощника. Приемника е вече готов за "
-#~ "ползване.\n"
-#~ "Моля натиснете OK за да започнете да използвате вашия Clarke-Tech."
-
-#~ msgid "The installation of the default services lists is finished."
-#~ msgstr "Инсталирането на стандартните листи с канали завърши."
-
-#~ msgid ""
-#~ "The installation of the default settings is finished. You can now "
-#~ "continue configuring your STB_BOX by pressing the OK button "
-#~ "on the remote control."
-#~ msgstr ""
-#~ "Инсталирането на стандартните листи с канали завърши. Сега вие можете да  "
-#~ "продължите с настройките на вашия Clarke-Tech с натискане ОК на "
-#~ "дистанционното."
-
-#~ msgid "The package doesn't contain anything."
-#~ msgstr "Пакетът не съдържа нищо"
-
-#~ msgid "The package:"
-#~ msgstr "Пакетът:"
-
-#~ msgid "There are no default services lists in your image."
-#~ msgstr "Няма стандартни списъци с канали във вашия имидж."
-
-#~ msgid "There are no default settings in your image."
-#~ msgstr "Няма стандартни настройки във вашия имидж."
-
-#~ msgid "There are now "
-#~ msgstr "Сега има"
-
-#~ msgid "There was an error downloading the packetlist. Please try again."
-#~ msgstr "Грешка при изтегляне на списъка с пакети! Опитайте отново."
-
-#~ msgid "There was an error. The package:"
-#~ msgstr "Грешка! Пакетът:"
-
-#~ msgid "This is step number 2."
-#~ msgstr "Това е стъпка номер 2."
-
-#~ msgid "Tuner "
-#~ msgstr "Тунер"
-
-#~ msgid "USB Stick"
-#~ msgstr "USB Стик"
-
-#~ msgid "Updates your STB_BOX's software"
-#~ msgstr "Актуализира софтуера на вашия приемник"
-
-#~ msgid "Updating finished. Here is the result:"
-#~ msgstr "Актуализацията завърши. Ето резултата:"
-
-#~ msgid "Updating... Please wait... This can take some minutes..."
-#~ msgstr ""
-#~ "Актуализация...Моля изчакайте...Това може да отнеме няколко минути..."
-
-#~ msgid "Upgrade finished. Do you want to reboot your STB_BOX?"
-#~ msgstr "Ъпгрейда завърши. Искате ли да рестартирате вашия Clarke-Tech?"
-
-#~ msgid "Upgrading STB_BOX... Please wait"
-#~ msgstr "Ъпгрейдвам Clarke-Tech... Моля изчакайте"
-
-#~ msgid "Use Power Measurement"
-#~ msgstr "Използвай Мерител на Захранването"
-
-#~ msgid ""
-#~ "Use the left and right buttons to change an option.\n"
-#~ "\n"
-#~ "Please set up tuner A"
-#~ msgstr ""
-#~ "Използвайте бутони ляво/дясно за смяна на опция.\n"
-#~ "\n"
-#~ "Моля настройте тунер А"
-
-#~ msgid "Use usals for this sat"
-#~ msgstr "Използвай USALS zа този сат"
-
-#~ msgid "Video Fine-Tuning Wizard"
-#~ msgstr "Помощник за фина настройка на картината"
-
-#~ msgid "Video Output"
-#~ msgstr "Видео Изход"
-
-#~ msgid "Video Setup"
-#~ msgstr "Видео Настройка"
-
-#~ msgid "Video Wizard"
-#~ msgstr "Видео Помощник"
-
-#~ msgid "What to do with submitted crashlogs?"
-#~ msgstr "Какво да направя с изпратените crashlogs?"
-
-#~ msgid "Yes, and don't ask again"
-#~ msgstr "Да, и не питай отново."
-
-#~ msgid "Yes, view the tutorial"
-#~ msgstr "Да, виж упътването"
-
-#~ msgid ""
-#~ "You can choose some default settings now. Please select the settings you "
-#~ "want to be installed."
-#~ msgstr ""
-#~ "Вие сега можете да изберете някои стандартни настройки. Моля изберете "
-#~ "настройките които искате да се инсталират."
-
-#~ msgid "You can choose, what you want to install..."
-#~ msgstr "Може да изберете, какво искате да се инсталира..."
-
-#~ msgid "You chose not to install any default services lists."
-#~ msgstr "Вие избрахте да не се инсталират стандартни списъци с канали."
-
-#~ msgid ""
-#~ "You chose not to install any default settings. You can however install "
-#~ "the default settings later in the settings menu."
-#~ msgstr ""
-#~ "Вие избрахте да не се инсталират стандартни настройки. Вие можете да ги "
-#~ "инсталирате по-късно от 'меню настройки'."
-
-#~ msgid ""
-#~ "You chose not to install anything. Please press OK finish the install "
-#~ "wizard."
-#~ msgstr ""
-#~ "Вие избрахте да не се инсталира нищо. Моля натиснете ОК за изход от "
-#~ "помощника."
-
-#~ msgid "Your email address:"
-#~ msgstr "Вашият email:"
-
-#~ msgid "Your name (optional):"
-#~ msgstr "Вашето име (по избор):"
-
-#~ msgid "alphabetic sort"
-#~ msgstr "подреждане по азбучен ред"
-
-#~ msgid ""
-#~ "are you sure you want to restore\n"
-#~ "following backup:\n"
-#~ msgstr ""
-#~ "искате ли да възстановите\n"
-#~ "следния backup:\n"
-
-#~ msgid "available"
-#~ msgstr "на разположение"
-
-#~ msgid "could not be removed"
-#~ msgstr "не може да се отстрани"
-
-#~ msgid "enigma2 and network"
-#~ msgstr "enigma2 и мрежа"
-
-#~ msgid "sort by date"
-#~ msgstr "подреди по дата"
-
-#~ msgid "was removed successfully"
-#~ msgstr "беше премахнат успешно"
