--- a/po/ca.po
+++ b/po/ca.po
@@ -6,16 +6,14 @@ msgstr ""
 "Project-Id-Version: enigma2\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2012-09-28 16:57+0100\n"
-"PO-Revision-Date: 2012-07-11 17:33+0100\n"
+"PO-Revision-Date: 2012-09-30 00:53-0000\n"
 "Last-Translator: Andy Blackburn <andyblac@o2.co.uk>\n"
 "Language-Team: \n"
-"Language: \n"
+"Language: ca\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
-"X-Poedit-Language: Catalan\n"
-"X-Poedit-Country: CATALONIA\n"
 "X-Poedit-SourceCharset: iso-8859-1\n"
 "X-Generator: KBabel 1.11.4\n"
 
@@ -7398,8 +7396,7 @@ msgid ""
 msgstr ""
 
 msgid ""
-"Thank you for using the wizard. Your STB_BOX is now ready for "
-"use.\n"
+"Thank you for using the wizard. Your STB_BOX is now ready for use.\n"
 "Press OK to start using your receiver."
 msgstr ""
 
@@ -7416,8 +7413,8 @@ msgstr ""
 #
 msgid ""
 "The DVD standard doesn't support H.264 (HDTV) video streams. Do you want to "
-"create a STB_BOX format data DVD (which will not play in stand-"
-"alone DVD players) instead?"
+"create a STB_BOX format data DVD (which will not play in stand-alone DVD "
+"players) instead?"
 msgstr ""
 
 msgid ""
@@ -7767,8 +7764,7 @@ msgstr ""
 
 msgid ""
 "This plugin creates a USB stick which can be used to update the firmware of "
-"your STB_BOX without the need for a network or WLAN "
-"connection.\n"
+"your STB_BOX without the need for a network or WLAN connection.\n"
 "First, a USB stick needs to be prepared so that it becomes bootable.\n"
 "In the next step, an NFI image file can be downloaded from the update server "
 "and saved on the USB stick.\n"
@@ -8716,22 +8712,20 @@ msgstr ""
 #
 msgid ""
 "Welcome to the Image upgrade wizard. The wizard will assist you in upgrading "
-"the firmware of your STB_BOX by providing a backup facility for "
-"your current settings and a short explanation of how to upgrade your "
-"firmware."
+"the firmware of your STB_BOX by providing a backup facility for your current "
+"settings and a short explanation of how to upgrade your firmware."
 msgstr ""
 "Benvingut a l'assistent per a l'actualització de la imatge. Aquest t'ajudarà "
-"a actualitzar el firmware de la STB_BOX, donant-te la "
-"possibilitat de fer una còpia de seguretat de la configuració actual, i amb "
-"una petita explicació sobre com actualitzar-ne el firmware."
+"a actualitzar el firmware de la STB_BOX, donant-te la possibilitat de fer "
+"una còpia de seguretat de la configuració actual, i amb una petita "
+"explicació sobre com actualitzar-ne el firmware."
 
 #
 msgid ""
 "Welcome.\n"
 "\n"
-"If you want to connect your STB_BOX to the Internet, this "
-"wizard will guide you through the basic network setup of your GigaBlue HD "
-"800 Solo.\n"
+"If you want to connect your STB_BOX to the Internet, this wizard will guide "
+"you through the basic network setup of your GigaBlue HD 800 Solo.\n"
 "\n"
 "Press OK to start configuring your network"
 msgstr ""
@@ -8853,8 +8847,7 @@ msgstr ""
 msgid ""
 "When you do a factory reset, you will lose ALL your configuration data\n"
 "(including bouquets, services, satellite data ...)\n"
-"After completion of factory reset, your STB_BOX will restart "
-"automatically!\n"
+"After completion of factory reset, your STB_BOX will restart automatically!\n"
 "\n"
 "Really do a factory reset?"
 msgstr ""
@@ -9085,24 +9078,24 @@ msgstr ""
 
 #
 msgid ""
-"You need a PC connected to your STB_BOX. If you need further "
-"instructions, please visit the website http://www.dm7025.de.\n"
-"Your STB_BOX will now be halted. After you have performed the "
-"update instructions from the website, your new firmware will ask you to "
-"restore your settings."
+"You need a PC connected to your STB_BOX. If you need further instructions, "
+"please visit the website http://www.dm7025.de.\n"
+"Your STB_BOX will now be halted. After you have performed the update "
+"instructions from the website, your new firmware will ask you to restore "
+"your settings."
 msgstr ""
-"Et caldrà un PC connectat a la STB_BOX. Si necesites més "
-"instruccions, consulta la pàgina web http://www.dm7025.de.\n"
-"Ara s'apagarà la STB_BOX. Després d'haver fer l'actualització "
-"segons les instruccions de la web,  el nou firmware et demanarà actualitzar "
-"la configuració."
+"Et caldrà un PC connectat a la STB_BOX. Si necesites més instruccions, "
+"consulta la pàgina web http://www.dm7025.de.\n"
+"Ara s'apagarà la STB_BOX. Després d'haver fer l'actualització segons les "
+"instruccions de la web,  el nou firmware et demanarà actualitzar la "
+"configuració."
 
 msgid "You system does not support ext4"
 msgstr ""
 
 msgid ""
-"Your STB_BOX is not connected to the internet, please check "
-"your network settings and try again."
+"Your STB_BOX is not connected to the internet, please check your network "
+"settings and try again."
 msgstr ""
 
 #
@@ -9134,27 +9127,25 @@ msgstr "La STB_BOX s'està reiniciant. Espera un moment..."
 
 #
 msgid ""
-"Your STB_BOX isn't connected to the internet properly. Please "
-"check it and try again."
+"Your STB_BOX isn't connected to the internet properly. Please check it and "
+"try again."
 msgstr ""
 "La connexió a internet no és correcta. Sisplau comprova-ho i torna-ho a "
 "intentar."
 
 msgid ""
-"Your STB_BOX might be unusable now. Please consult the manual "
-"for further assistance before rebooting your STB_BOX."
+"Your STB_BOX might be unusable now. Please consult the manual for further "
+"assistance before rebooting your STB_BOX."
 msgstr ""
 
 #, python-format
 msgid ""
-"Your STB_BOX will be restarted after the installation of "
-"service\n"
+"Your STB_BOX will be restarted after the installation of service\n"
 "Ready to install \"%s\" ?"
 msgstr ""
 
 msgid ""
-"Your STB_BOX will be restarted after the installation of "
-"service.\n"
+"Your STB_BOX will be restarted after the installation of service.\n"
 "\n"
 "Do you want to install now ?"
 msgstr ""
@@ -10906,317 +10897,3 @@ msgstr "zappejar"
 #
 msgid "zapped"
 msgstr "zappejat"
-
-#
-#~ msgid "/usr/share/enigma2 directory"
-#~ msgstr "directori /usr/share/enigma2"
-
-#
-#~ msgid "/var directory"
-#~ msgstr "directori /var"
-
-#
-#~ msgid ""
-#~ "After the start wizard is completed, you need to protect single services. "
-#~ "Refer to your STB_BOX's manual on how to do that."
-#~ msgstr ""
-#~ "Quan acabi aquest assistent caldrà protegir els canals desitjats. Mira el "
-#~ "manual de la STB_BOX per saber com fer-ho."
-
-#
-#~ msgid "Ask before shutdown:"
-#~ msgstr "Pregunta abans d'apagar:"
-
-#
-#~ msgid "Backup"
-#~ msgstr "Backup"
-
-#
-#~ msgid "Backup Location"
-#~ msgstr "Localització del backup"
-
-#
-#~ msgid "Backup Mode"
-#~ msgstr "Mode del backup"
-
-#
-#~ msgid ""
-#~ "By pressing the OK Button on your remote control, the info bar is being "
-#~ "displayed."
-#~ msgstr ""
-#~ "Prement el botó OK del comandament, la barra d'informació es farà visible."
-
-#
-#~ msgid "CF Drive"
-#~ msgstr "Unitat CF"
-
-#
-#~ msgid "Display Setup"
-#~ msgstr "Configurar Display"
-
-#
-#~ msgid ""
-#~ "Do you want to backup now?\n"
-#~ "After pressing OK, please wait!"
-#~ msgstr ""
-#~ "Vols fer el backup ara?\n"
-#~ "Després de prémer OK, sisplau espera!"
-
-#
-#~ msgid ""
-#~ "Do you want to enable the parental control feature on your GigaBlue HD "
-#~ "800 Solo?"
-#~ msgstr "Vols habilitar el control parental?"
-
-#
-#~ msgid ""
-#~ "Do you want to update your STB_BOX?\n"
-#~ "After pressing OK, please wait!"
-#~ msgstr ""
-#~ "Vols actualitzar la STB_BOX?\n"
-#~ "Després de prémer OK, espera!"
-
-#
-#~ msgid "Do you want to view a tutorial?"
-#~ msgstr "Vols veure un manual?"
-
-#
-#~ msgid "Done - Installed or upgraded %d packages"
-#~ msgstr "Fet. %d paquets instal·lats o actualitzats"
-
-#
-#~ msgid "Keyboard Setup"
-#~ msgstr "Configuració teclat"
-
-#
-#~ msgid "LOF"
-#~ msgstr "LOF"
-
-#
-#~ msgid "LOF/H"
-#~ msgstr "LOF/H"
-
-#
-#~ msgid "LOF/L"
-#~ msgstr "LOF/L"
-
-#
-#~ msgid "Mode"
-#~ msgstr "Mode"
-
-#
-#~ msgid ""
-#~ "No packages were upgraded yet. So you can check your network and try "
-#~ "again."
-#~ msgstr ""
-#~ "No s'ha actualitzat cap paquet. Comprova la xarxa i torna-ho a provar."
-
-#
-#~ msgid "Please press OK!"
-#~ msgstr "Sisplau prem OK!"
-
-#
-#~ msgid "Sat / Dish Setup"
-#~ msgstr "Configuració antena"
-
-#
-#~ msgid "Scan QAM128"
-#~ msgstr "Escanejar QAM128"
-
-#
-#~ msgid "Scan QAM16"
-#~ msgstr "Escanejar QAM16"
-
-#
-#~ msgid "Scan QAM256"
-#~ msgstr "Escanejar QAM256"
-
-#
-#~ msgid "Scan QAM32"
-#~ msgstr "Escanejar QAM32"
-
-#
-#~ msgid "Scan QAM64"
-#~ msgstr "Escanejar QAM64"
-
-#
-#~ msgid "Scan SR6875"
-#~ msgstr "Escanejar SR6875"
-
-#
-#~ msgid "Scan SR6900"
-#~ msgstr "Escanejar SR6900"
-
-#
-#~ msgid "Scan band EU HYPER"
-#~ msgstr "Escanejar banda EU HYPER"
-
-#
-#~ msgid "Scan band EU MID"
-#~ msgstr "Escanejar banda EU MID"
-
-#
-#~ msgid "Scan band EU SUPER"
-#~ msgstr "Escanejar banda EU SUPER"
-
-#
-#~ msgid "Scan band EU UHF IV"
-#~ msgstr "Escanejar banda EU UHF IV"
-
-#
-#~ msgid "Scan band EU UHF V"
-#~ msgstr "Escanejar banda EU UHF V"
-
-#
-#~ msgid "Scan band EU VHF I"
-#~ msgstr "Escanejar banda EU VHF I"
-
-#
-#~ msgid "Scan band EU VHF III"
-#~ msgstr "Escanejar banda EU VHF III"
-
-#
-#~ msgid "Scan band US HIGH"
-#~ msgstr "Escanejar banda US HIGH"
-
-#
-#~ msgid "Scan band US HYPER"
-#~ msgstr "Escanejar banda US HYPER"
-
-#
-#~ msgid "Scan band US LOW"
-#~ msgstr "Escanejar banda US LOW"
-
-#
-#~ msgid "Scan band US MID"
-#~ msgstr "Escanejar banda US MID"
-
-#
-#~ msgid "Scan band US SUPER"
-#~ msgstr "Escanejar banda US SUPER"
-
-#
-#~ msgid "Service Searching"
-#~ msgstr "Buscar canals"
-
-#
-#~ msgid "Shutdown STB_BOX after"
-#~ msgstr "Apagar la STB_BOX després de"
-
-#
-#~ msgid "Sleep timer action:"
-#~ msgstr "Acció de la programació d'apagada"
-
-#
-#~ msgid ""
-#~ "Sorry your Backup destination does not exist\n"
-#~ "\n"
-#~ "Please choose an other one."
-#~ msgstr ""
-#~ "El destí del backup no existeix\n"
-#~ "\n"
-#~ "Sisplau, escull-ne un altre."
-
-#
-#~ msgid ""
-#~ "Thank you for using the wizard. Your STB_BOX is now ready to "
-#~ "use.\n"
-#~ "Please press OK to start using your STB_BOX."
-#~ msgstr ""
-#~ "Gràcies per utilitzar l'assistent. La STB_BOX ara ja està "
-#~ "llesta per a ser utilitzada.\n"
-#~ "Sisplau, prem OK per a començar a fer-la servir."
-
-#
-#~ msgid "This is step number 2."
-#~ msgstr "Aquest és el pas número 2."
-
-#
-#~ msgid "Tuner "
-#~ msgstr "Sintonitzador"
-
-#
-#~ msgid "USB Stick"
-#~ msgstr "Memòria USB"
-
-#
-#~ msgid "Updates your STB_BOX's software"
-#~ msgstr "Actualitza el programari del receptor"
-
-#
-#~ msgid "Updating finished. Here is the result:"
-#~ msgstr "Actualització acabada. Resultat:"
-
-#
-#~ msgid "Updating... Please wait... This can take some minutes..."
-#~ msgstr "Actualitzant... espera... Pot trigar uns quants minuts..."
-
-#
-#~ msgid "Upgrade finished. Do you want to reboot your STB_BOX?"
-#~ msgstr ""
-#~ "S'ha acabat l'actualització. Vols tornar a arrancar la GigaBlue HD 800 "
-#~ "Solo?"
-
-#
-#~ msgid "Upgrading STB_BOX... Please wait"
-#~ msgstr "Actualitzant la STB_BOX... Sisplau espera"
-
-#
-#~ msgid "Use Power Measurement"
-#~ msgstr "Utilitzar mesura de corrent"
-
-#
-#~ msgid ""
-#~ "Use the left and right buttons to change an option.\n"
-#~ "\n"
-#~ "Please set up tuner A"
-#~ msgstr ""
-#~ "Utilitza els botons dreta/esquerra per a canviar una opció.\n"
-#~ "\n"
-#~ "Sisplau configura el sintonitzador A"
-
-#
-#~ msgid "Use usals for this sat"
-#~ msgstr "Utilitzar usals per a aquest sat"
-
-#
-#~ msgid ""
-#~ "Welcome.\n"
-#~ "\n"
-#~ "This start wizard will guide you through the basic setup of your Xtrend "
-#~ "ET9.\n"
-#~ "Press the OK button on your remote control to move to the next step."
-#~ msgstr ""
-#~ "Benvingut.\n"
-#~ "\n"
-#~ "Aquest asistent et guiarà a través de la configuració bàsica de la Xtrend "
-#~ "ET9.\n"
-#~ "Prem el botó OK del comandament a distància per anar al següent pas."
-
-#
-#~ msgid "Yes, view the tutorial"
-#~ msgstr "Si, veure el tutorial"
-
-#
-#~ msgid ""
-#~ "are you sure you want to restore\n"
-#~ "following backup:\n"
-#~ msgstr ""
-#~ "segur que vols restaurar\n"
-#~ "el següent backup:\n"
-
-#
-#~ msgid "shutdown"
-#~ msgstr "apagar"
-
-#
-#~ msgid "standby"
-#~ msgstr "en repòs"
-
-#
-#~ msgid ""
-#~ "your STB_BOX might be unusable now. Please consult the "
-#~ "manual for further assistance before rebooting your STB_BOX."
-#~ msgstr ""
-#~ "Ara la STB_BOX podria ser inusable. Sisplau consulta el "
-#~ "manual abans de reiniciar-la."
