--- a/po/fa.po
+++ b/po/fa.po
@@ -5,7 +5,7 @@ msgstr ""
 "Project-Id-Version: enigma2\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2012-09-28 16:57+0100\n"
-"PO-Revision-Date: 2012-09-14 19:13-0000\n"
+"PO-Revision-Date: 2012-09-30 00:52-0000\n"
 "Last-Translator: Andy Blackburn <andyblac@o2.co.uk>\n"
 "Language-Team: Persian Professionals <persianpros@yahoo.com>\n"
 "Language: fa\n"
@@ -6614,8 +6614,7 @@ msgstr ""
 "برای ادامه دادن دکمه OK را فشار دهید"
 
 msgid ""
-"Thank you for using the wizard. Your STB_BOX is now ready for "
-"use.\n"
+"Thank you for using the wizard. Your STB_BOX is now ready for use.\n"
 "Press OK to start using your receiver."
 msgstr ""
 
@@ -6631,8 +6630,8 @@ msgstr ""
 
 msgid ""
 "The DVD standard doesn't support H.264 (HDTV) video streams. Do you want to "
-"create a STB_BOX format data DVD (which will not play in stand-"
-"alone DVD players) instead?"
+"create a STB_BOX format data DVD (which will not play in stand-alone DVD "
+"players) instead?"
 msgstr ""
 
 msgid ""
@@ -6980,8 +6979,7 @@ msgstr ""
 
 msgid ""
 "This plugin creates a USB stick which can be used to update the firmware of "
-"your STB_BOX without the need for a network or WLAN "
-"connection.\n"
+"your STB_BOX without the need for a network or WLAN connection.\n"
 "First, a USB stick needs to be prepared so that it becomes bootable.\n"
 "In the next step, an NFI image file can be downloaded from the update server "
 "and saved on the USB stick.\n"
@@ -7822,18 +7820,16 @@ msgstr ""
 
 msgid ""
 "Welcome to the Image upgrade wizard. The wizard will assist you in upgrading "
-"the firmware of your STB_BOX by providing a backup facility for "
-"your current settings and a short explanation of how to upgrade your "
-"firmware."
+"the firmware of your STB_BOX by providing a backup facility for your current "
+"settings and a short explanation of how to upgrade your firmware."
 msgstr ""
 
 #
 msgid ""
 "Welcome.\n"
 "\n"
-"If you want to connect your STB_BOX to the Internet, this "
-"wizard will guide you through the basic network setup of your GigaBlue HD "
-"800 Solo.\n"
+"If you want to connect your STB_BOX to the Internet, this wizard will guide "
+"you through the basic network setup of your GigaBlue HD 800 Solo.\n"
 "\n"
 "Press OK to start configuring your network"
 msgstr ""
@@ -7952,8 +7948,7 @@ msgstr ""
 msgid ""
 "When you do a factory reset, you will lose ALL your configuration data\n"
 "(including bouquets, services, satellite data ...)\n"
-"After completion of factory reset, your STB_BOX will restart "
-"automatically!\n"
+"After completion of factory reset, your STB_BOX will restart automatically!\n"
 "\n"
 "Really do a factory reset?"
 msgstr ""
@@ -8164,19 +8159,19 @@ msgid "You have to wait %s!"
 msgstr "لطفا صبر کنید %s"
 
 msgid ""
-"You need a PC connected to your STB_BOX. If you need further "
-"instructions, please visit the website http://www.dm7025.de.\n"
-"Your STB_BOX will now be halted. After you have performed the "
-"update instructions from the website, your new firmware will ask you to "
-"restore your settings."
+"You need a PC connected to your STB_BOX. If you need further instructions, "
+"please visit the website http://www.dm7025.de.\n"
+"Your STB_BOX will now be halted. After you have performed the update "
+"instructions from the website, your new firmware will ask you to restore "
+"your settings."
 msgstr ""
 
 msgid "You system does not support ext4"
 msgstr ""
 
 msgid ""
-"Your STB_BOX is not connected to the internet, please check "
-"your network settings and try again."
+"Your STB_BOX is not connected to the internet, please check your network "
+"settings and try again."
 msgstr ""
 
 msgid ""
@@ -8213,25 +8208,23 @@ msgid "Your STB_BOX is shutting down. Please stand by..."
 msgstr ""
 
 msgid ""
-"Your STB_BOX isn't connected to the internet properly. Please "
-"check it and try again."
+"Your STB_BOX isn't connected to the internet properly. Please check it and "
+"try again."
 msgstr "دستگاه شما به اینترنت متصل نیست ، لطفا بررسی و دوباره سعی کنید"
 
 msgid ""
-"Your STB_BOX might be unusable now. Please consult the manual "
-"for further assistance before rebooting your STB_BOX."
+"Your STB_BOX might be unusable now. Please consult the manual for further "
+"assistance before rebooting your STB_BOX."
 msgstr ""
 
 #, python-format
 msgid ""
-"Your STB_BOX will be restarted after the installation of "
-"service\n"
+"Your STB_BOX will be restarted after the installation of service\n"
 "Ready to install \"%s\" ?"
 msgstr ""
 
 msgid ""
-"Your STB_BOX will be restarted after the installation of "
-"service.\n"
+"Your STB_BOX will be restarted after the installation of service.\n"
 "\n"
 "Do you want to install now ?"
 msgstr ""
@@ -9733,572 +9726,3 @@ msgstr "حذف"
 
 msgid "zapped"
 msgstr "حذف شد"
-
-#
-#~ msgid ""
-#~ "\n"
-#~ "System will restart after the restore!"
-#~ msgstr ""
-#~ "\n"
-#~ "سیستم بعد از بازگردانی دوباره راه اندازی میشود"
-
-#~ msgid "/usr/share/enigma2 directory"
-#~ msgstr "شاخه /usr/share/enigma2"
-
-#~ msgid "/var directory"
-#~ msgstr "پوشه /var"
-
-#~ msgid "Add WLAN configuration?"
-#~ msgstr "اضافه کردن پیکربندی شبکه بدون سیم ؟"
-
-#~ msgid "Add network configuration?"
-#~ msgstr "اضافه کردن پیکربندی شبکه؟"
-
-#~ msgid "Adds network configuration if enabled."
-#~ msgstr "اضافه کردن پیکربندی شبکه در صورت فعال بودن"
-
-#
-#~ msgid "Adds wlan configuration if enabled."
-#~ msgstr "افزودن پیکربندی شبکه بدون سیم اگر فعال است"
-
-#~ msgid "Advanced Video Setup"
-#~ msgstr "تنظیمات پیشرفته تصویر"
-
-#~ msgid ""
-#~ "After the start wizard is completed, you need to protect single services. "
-#~ "Refer to your STB_BOX's manual on how to do that."
-#~ msgstr ""
-#~ "بعد از این که هدایتگر کامل شد ، شما باید از کانال های تنها حفاظت کنید  ، "
-#~ "رجوع شود به دفترچه راهنمای دستگاه که چگونه انجام شود"
-
-#~ msgid "All Satellites"
-#~ msgstr "همه ماهواره ها"
-
-#~ msgid "Always ask before sending"
-#~ msgstr "همیشه قبل از ارسال پرسیده شود"
-
-#
-#~ msgid "Anonymize crashlog?"
-#~ msgstr "ناشناس کردن گزارش خطای دستگاه ؟"
-
-#~ msgid ""
-#~ "Are you sure you want to delete\n"
-#~ "following backup:\n"
-#~ msgstr ""
-#~ "آیا مطمئن هستید که میخواهید\n"
-#~ "این نسخه پشتیبان را حذف کنید\n"
-
-#~ msgid ""
-#~ "Are you sure you want to restore\n"
-#~ "following backup:\n"
-#~ msgstr ""
-#~ "آیا مطمئن هستید که میخواهید\n"
-#~ "این نسخه پشتیبان را بازگردانی کنید\n"
-
-#
-#~ msgid ""
-#~ "Are you sure you want to restore your Enigma2 backup?\n"
-#~ "Enigma2 will restart after the restore"
-#~ msgstr ""
-#~ "آیا مطمئن هستید که میخواهید نسخه پشتیبان انیگما 2 خود را بازگردانی "
-#~ "کنید ؟\n"
-#~ "انیگما 2 بعد از این بازگردانی دوباره راه اندازی میشود"
-
-#~ msgid "Backup"
-#~ msgstr "نسخه پشتیبان"
-
-#~ msgid "Backup Location"
-#~ msgstr "محل نسخه پشتیبان"
-
-#~ msgid "Backup Mode"
-#~ msgstr "حالت نسخه پشتیبان"
-
-#~ msgid "Backup done."
-#~ msgstr "نسخه پشتیبان تهیه شد"
-
-#~ msgid ""
-#~ "By pressing the OK Button on your remote control, the info bar is being "
-#~ "displayed."
-#~ msgstr "با فشار دادن دکمه OK نوار اطلاعات نمایش داده خواهد شد"
-
-#~ msgid "CF Drive"
-#~ msgstr "CF درایو"
-
-#~ msgid "Cleanup Wizard"
-#~ msgstr "هدایتگر پاک سازی"
-
-#~ msgid "Cleanup Wizard settings"
-#~ msgstr "تنظیمات هدایتگر پاک سازی"
-
-#~ msgid "CleanupWizard"
-#~ msgstr "هدایتگر پاک سازی"
-
-#~ msgid "Crashlog settings"
-#~ msgstr "تنظیمات گزارش خطای دستگاه"
-
-#
-#~ msgid "CrashlogAutoSubmit"
-#~ msgstr "ارسال خودکار گزارش های خطای دستگاه"
-
-#
-#~ msgid "CrashlogAutoSubmit settings"
-#~ msgstr "تنظیمات ارسال خودکار گزارش های خطای دستگاه"
-
-#
-#~ msgid "CrashlogAutoSubmit settings..."
-#~ msgstr "تنظیمات ارسال خودکار گزارش های خطای دستگاه"
-
-#
-#~ msgid ""
-#~ "Crashlogs found!\n"
-#~ "Send them to Dream Multimedia?"
-#~ msgstr ""
-#~ "گزارش های خطای دستگاه یافت شدند\n"
-#~ "برای شرکت Dream Multimedia ارسال شوند ؟"
-
-#~ msgid "Custom text alignment"
-#~ msgstr "تراز متن سفارشی"
-
-#~ msgid "Custom text position"
-#~ msgstr "موقعیت متن سفارشی"
-
-#~ msgid "Decide if you want to enable or disable the Cleanup Wizard."
-#~ msgstr "تصمیم بگیرید که آیا میخواهید هدایتگر پاک ساز فعال شود یا غیر فعال"
-
-#~ msgid "Decide what should be done when crashlogs are found."
-#~ msgstr "تصمیم بگیرید که وقتی گزارش خطا یافت شد چه باید شود"
-
-#~ msgid "Decide what should happen to the crashlogs after submission."
-#~ msgstr "تصمیم بگیرید که بعد از ثبت گزارش خطا باید با آنها چه کرد"
-
-#~ msgid "Delete crashlogs"
-#~ msgstr "حذف گزارش های خطای دستگاه"
-
-#~ msgid ""
-#~ "Delete no more configured satellite\n"
-#~ "%s?"
-#~ msgstr ""
-#~ "ماهواره پیکربندی شده بیش از این حذف نشود\n"
-#~ "%s?"
-
-#
-#~ msgid "Disable crashlog reporting"
-#~ msgstr "غیر فعال کردن گزارش های خطای دستگاه"
-
-#~ msgid ""
-#~ "Do you want to enable the parental control feature on your GigaBlue HD "
-#~ "800 Solo?"
-#~ msgstr "آیا میخواهید ویژگی کنترل والدین را در دستگاه خود فعال کنید ؟"
-
-#
-#~ msgid ""
-#~ "Do you want to submit your email address and name so that we can contact "
-#~ "you if needed?"
-#~ msgstr ""
-#~ "آیا میخواهید آدرس ایمیل و نام خود را ارسال کنید تا هنگامی که نیاز باشد با "
-#~ "شما تماس بگیریم ؟"
-
-#~ msgid ""
-#~ "Do you want to update your STB_BOX?\n"
-#~ "After pressing OK, please wait!"
-#~ msgstr ""
-#~ "آیا میخواهید دستگاه خود را به روز رسانی کنید ؟\n"
-#~ "بعد از فشار دادن دکمه OK لطفا صبر کنید"
-
-#~ msgid "Do you want to view a tutorial?"
-#~ msgstr "آیا میخواهید خود آموز را مشاهده کنید ؟"
-
-#
-#~ msgid "Don't ask, just send"
-#~ msgstr "پرسیده نشود فقط ارسال شود"
-
-#~ msgid "Done - Installed or upgraded %d packages"
-#~ msgstr "انجام شد ، تعداد %d مورد نصب یا به روز رسانی شد"
-
-#
-#~ msgid "Enable Cleanup Wizard?"
-#~ msgstr "فعال کردن هدایتگر پاک سازی؟"
-
-#
-#~ msgid "Enter your email address so that we can contact you if needed."
-#~ msgstr "ایمیل خود را وارد کنید تا بتوانیم در هنگام نیاز با شما تماس بگیریم"
-
-#~ msgid "Exit the cleanup wizard"
-#~ msgstr "خروج از هدایتگر پاک سازی"
-
-#
-#~ msgid "General AC3 Delay"
-#~ msgstr "تاخیر عمومی AC3"
-
-#
-#~ msgid "General PCM Delay"
-#~ msgstr "تاخیر عمومی PCM"
-
-#~ msgid "How to handle found crashlogs?"
-#~ msgstr "چگونه به گزارش های خطای یافت شده رسیدگی شود ؟"
-
-#
-#~ msgid "Include your email and name (optional) in the mail?"
-#~ msgstr "شامل ایمیل و نام (اختیاری) شما بشود ؟"
-
-#~ msgid "Install settings, skins, software..."
-#~ msgstr "در حال نصب تنظیمات ، اسکین ها ، نرم افزار و ..."
-
-#~ msgid "Installing default sat lists... Please wait..."
-#~ msgstr "در حال نصب لیست های ماهواره پیش فرض ، لطفا صبر کنید"
-
-#~ msgid "Installing defaults... Please wait..."
-#~ msgstr "در حال نصب تنظیمات پیش فرض ، لطفا صبر کنید"
-
-#~ msgid "Installing package content... Please wait..."
-#~ msgstr "نصب محتویات بسته ، لطفا صبر کنید"
-
-#
-#~ msgid "Is this videomode ok?"
-#~ msgstr "آیا این حالت تصویر درست است ؟"
-
-#~ msgid "LOF"
-#~ msgstr "LOF"
-
-#~ msgid "LOF/H"
-#~ msgstr "LOF/H"
-
-#~ msgid "LOF/L"
-#~ msgstr "LOF/L"
-
-#~ msgid "Mode"
-#~ msgstr "حالت"
-
-#~ msgid ""
-#~ "No packages were upgraded yet. So you can check your network and try "
-#~ "again."
-#~ msgstr ""
-#~ "هیچ بسته ای به روز رسانی نشده است ، تنظیمات شبکه را بررسی و دوباره سعی "
-#~ "کنید"
-
-#~ msgid "No, not now"
-#~ msgstr "خیر ، حالا نه"
-
-#
-#~ msgid "No, send them never"
-#~ msgstr "خیر ، هیچ وقت ارسال نشوند"
-
-#~ msgid "OK, remove another extensions"
-#~ msgstr "OK ، حذف یک بسته دیگر"
-
-#
-#~ msgid "OK, remove some extensions"
-#~ msgstr "تعدادی بسته نرم افزاری حذف کنید"
-
-#
-#~ msgid "Optionally enter your name if you want to."
-#~ msgstr "اگر مایل هستید نام خود را وارد کنید (اختیاری)"
-
-#~ msgid "Overwrite configuration files ?"
-#~ msgstr "بازنویسی فایل های پیکربندی ؟"
-
-#~ msgid "Package removal failed.\n"
-#~ msgstr "حذف بسته ناموفق\n"
-
-#~ msgid "Package removed successfully.\n"
-#~ msgstr "بسته با موفقیت حذف شد\n"
-
-#~ msgid "Please choose he package..."
-#~ msgstr "لطفا یک بسته انتخاب کنید"
-
-#~ msgid "Please choose the default services lists you want to install."
-#~ msgstr "لطفا لیست های پیش فرض مورد نظر خود را برای نصب انتخاب کنید"
-
-#
-#~ msgid "Please enter your email address here:"
-#~ msgstr "لطفا آدرس ایمیل خود را اینجا بنویسید:"
-
-#~ msgid "Please enter your name here (optional):"
-#~ msgstr "لطفا نام خود را وارد کنید (اختیاری) :"
-
-#~ msgid "Please press OK!"
-#~ msgstr "لطفا دکمه OK را فشار دهید"
-
-#~ msgid "Please select an extension to remove."
-#~ msgstr "لطفا یک بسته را برای حذف کردن انتخاب کنید"
-
-#~ msgid "Please select an option below."
-#~ msgstr "لطفا یک مورد زیر را انتخاب کنید"
-
-#~ msgid "Please wait while removing selected package..."
-#~ msgstr "لطفا صبر کنید تا بسته های انتخاب شده حذف شوند"
-
-#
-#~ msgid "Please wait while searching for removable packages..."
-#~ msgstr "لطفا صبر کنید تا پیکج های قابل حذف جستجو شوند"
-
-#~ msgid "Remove failed."
-#~ msgstr "حذف ناموفق"
-
-#
-#~ msgid "Removed successfully."
-#~ msgstr "با موفقیت حذف شد"
-
-#
-#~ msgid "Rename crashlogs"
-#~ msgstr "تغییر نام گزارش های خطای دستگاه"
-
-#~ msgid "Restore running"
-#~ msgstr "بازگردانی در حال انجام است"
-
-#~ msgid "Scan QAM128"
-#~ msgstr "جستجوی QAM128"
-
-#~ msgid "Scan QAM16"
-#~ msgstr "جستجوی QAM16"
-
-#~ msgid "Scan QAM256"
-#~ msgstr "جستجوی QAM256"
-
-#~ msgid "Scan QAM32"
-#~ msgstr "جستجوی QAM32"
-
-#~ msgid "Scan QAM64"
-#~ msgstr "جستجوی QAM64"
-
-#~ msgid "Scan SR6875"
-#~ msgstr "جستجوی SR6875"
-
-#~ msgid "Scan SR6900"
-#~ msgstr "جستجوی SR6900"
-
-#~ msgid "Scan band EU HYPER"
-#~ msgstr "اسکن باند EU HYPER"
-
-#~ msgid "Scan band EU MID"
-#~ msgstr "اسکن باند EU MID"
-
-#~ msgid "Scan band EU SUPER"
-#~ msgstr "اسکن باند EU SUPER"
-
-#~ msgid "Scan band EU UHF IV"
-#~ msgstr "اسکن باند EU UHF IV"
-
-#~ msgid "Scan band EU UHF V"
-#~ msgstr "اسکن باند EU UHF V"
-
-#~ msgid "Scan band EU VHF I"
-#~ msgstr "اسکن باند EU VHF I"
-
-#~ msgid "Scan band EU VHF III"
-#~ msgstr "اسکن باند EU VHF III"
-
-#~ msgid "Scan band US HIGH"
-#~ msgstr "اسکن باند US HIGH"
-
-#~ msgid "Scan band US HYPER"
-#~ msgstr "اسکن باند US HYPER"
-
-#~ msgid "Scan band US LOW"
-#~ msgstr "اسکن باند US LOW"
-
-#~ msgid "Scan band US MID"
-#~ msgstr "اسکن باند US MID"
-
-#~ msgid "Scan band US SUPER"
-#~ msgstr "اسکن باند US SUPER"
-
-#~ msgid "Select package"
-#~ msgstr "انتخاب بسته"
-
-#
-#~ msgid "Set Voltage and 22KHz"
-#~ msgstr "تنظیم ولتاژ و 22KHz"
-
-#
-#~ msgid "Set available internal memory threshold for the warning."
-#~ msgstr "تنظیم حافظه داخلی در دسترس برای آستانه هشدار"
-
-#
-#~ msgid "Sorry MediaScanner is not installed!"
-#~ msgstr "متاسفانه MediaScanner نصب نشده است"
-
-#
-#~ msgid "Sorry no backups found!"
-#~ msgstr "متاسفانه هیچ نسخه پشتیبانی یافت نشد"
-
-#
-#~ msgid ""
-#~ "Sorry your backup destination is not writeable.\n"
-#~ "Please choose an other one."
-#~ msgstr ""
-#~ "متاسفانه مقصد نسخه پشتیبان شما قابل نوشتن نیست\n"
-#~ "لطفا محل دیگری را انتخاب کنید"
-
-#
-#~ msgid "Sorry, no Details available!"
-#~ msgstr "متاسفانه هیچ جزئیاتی در دسترس نیست"
-
-#
-#~ msgid ""
-#~ "Sorry, your backup destination is not writeable.\n"
-#~ "\n"
-#~ "Please choose another one."
-#~ msgstr ""
-#~ "متاسفانه مقصد نسخه پشتیبان شما قابل نوشتن نیست\n"
-#~ "\n"
-#~ "لطفا محل دیگری را انتخاب کنید"
-
-#~ msgid "Text border width"
-#~ msgstr "پهنای حاشیه نوشته"
-
-#~ msgid "Text font size"
-#~ msgstr "اندازه فونت نوشته"
-
-#~ msgid "The installation of the default services lists is finished."
-#~ msgstr "نصب لیست های کانال های پیش فرض به پایان رسید"
-
-#~ msgid ""
-#~ "The installation of the default settings is finished. You can now "
-#~ "continue configuring your STB_BOX by pressing the OK button "
-#~ "on the remote control."
-#~ msgstr ""
-#~ "نصب تنظیمات پیش فرض پایان یافت ، شما میتوانید برای ادامه پیکربندی دستگاه "
-#~ "خود دکمه OK روی ریموت کنترل را فشار دهید"
-
-#~ msgid "The package doesn't contain anything."
-#~ msgstr "این بسته شامل چیزی نمیشود"
-
-#~ msgid "The package:"
-#~ msgstr "بسته :"
-
-#~ msgid "There are no default services lists in your image."
-#~ msgstr "هیچ لیست کانال پیش فرضی در ایمیج شما وجود ندارد"
-
-#~ msgid "There are no default settings in your image."
-#~ msgstr "هیچ تنظیمات پیش فرضی در ایمیج شما وجود ندارد"
-
-#
-#~ msgid "There are now "
-#~ msgstr "آنها هم اکنون هستند"
-
-#~ msgid "There was an error downloading the packetlist. Please try again."
-#~ msgstr "یک خطا هنگام دانلود لیست بسته ها رخ داد ، لطفا دوباره سعی کنید"
-
-#~ msgid "There was an error. The package:"
-#~ msgstr "یک خطا رخ داد ، بسته :"
-
-#~ msgid "This is step number 2."
-#~ msgstr "این مرحله دوم است"
-
-#~ msgid "Tone Amplitude"
-#~ msgstr "دامنه تن"
-
-#~ msgid "Tuner "
-#~ msgstr "تیونر"
-
-#~ msgid "USB Stick"
-#~ msgstr "USB Stick"
-
-#~ msgid "Updating finished. Here is the result:"
-#~ msgstr "به روز رسانی انجام شد ، نتیجه این است"
-
-#~ msgid "Updating... Please wait... This can take some minutes..."
-#~ msgstr "در حال به روز رسانی ، لطفا صبر کنید ، ممکن است چند دقیقه زمان ببرد"
-
-#~ msgid "Upgrading STB_BOX... Please wait"
-#~ msgstr "در حال به روز رسانی دستگاه ، لطفا صبر کنید"
-
-#~ msgid "Use Power Measurement"
-#~ msgstr "استفاده از اندازه گیری توان"
-
-#~ msgid "Use this settings?"
-#~ msgstr "استفاده از این تنظیمات ؟"
-
-#~ msgid "Use usals for this sat"
-#~ msgstr "استفاده از usals برای این ماهواره"
-
-#~ msgid "Video Fine-Tuning Wizard"
-#~ msgstr "هدایتگر بهینه سازی تصویر"
-
-#~ msgid "Video Output"
-#~ msgstr "خروجی تصویر"
-
-#~ msgid "Video Setup"
-#~ msgstr "تنظیمات تصویر"
-
-#~ msgid "Video Wizard"
-#~ msgstr "هدایتگر تصویر"
-
-#
-#~ msgid "Warn if free space drops below (kB):"
-#~ msgstr "هشدار دادن اگر فضای خالی به کمتر از این میزان کیلوبایت رسید"
-
-#
-#~ msgid "What to do with submitted crashlogs?"
-#~ msgstr "گزارش های خطای دستگاه چه شوند ؟"
-
-#
-#~ msgid "Yes, and don't ask again"
-#~ msgstr "بله ، و دوباره پرسیده نشود"
-
-#~ msgid "Yes, view the tutorial"
-#~ msgstr "بله ، مشاهده خودآموز"
-
-#~ msgid ""
-#~ "You can choose some default settings now. Please select the settings you "
-#~ "want to be installed."
-#~ msgstr ""
-#~ "شما هم اکنون میتوانید تعدادی تنظیمات پیش فرض انتخاب کنید ، لطفا تنظیمات "
-#~ "مورد نظر خود را برای نصب انتخاب کنید"
-
-#~ msgid "You can choose, what you want to install..."
-#~ msgstr "انتخاب با شما است ، میتوانید هر انتخابی برای نصب داشته باشید"
-
-#~ msgid "You chose not to install any default services lists."
-#~ msgstr "شما هیچ لیست کانال پیش فرضی را برای نصب انتخاب نکرده اید"
-
-#~ msgid ""
-#~ "You chose not to install any default settings. You can however install "
-#~ "the default settings later in the settings menu."
-#~ msgstr ""
-#~ "شما هیچ تنظیمات پیش فرضی را برای نصب انتخاب نکرده اید ، اگرچه در آینده "
-#~ "میتوانید تنظیمات پیش فرض توسط منوی تنظیمات نصب کنید"
-
-#~ msgid ""
-#~ "You chose not to install anything. Please press OK finish the install "
-#~ "wizard."
-#~ msgstr ""
-#~ "شما هیچ چیزی برای نصب انتخاب نکرده اید ، لطفا دکمه OK را برای پایان "
-#~ "هدایتگر نصب فشار دهید"
-
-#
-#~ msgid "Your email address:"
-#~ msgstr "آدرس ایمیل شما"
-
-#
-#~ msgid "Your name (optional):"
-#~ msgstr "نام شما (اختیاری)"
-
-#~ msgid "alphabetic sort"
-#~ msgstr "چیدمان بر اساس حروف الفبا"
-
-#~ msgid "available"
-#~ msgstr "در دسترس"
-
-#
-#~ msgid "could not be removed"
-#~ msgstr "نمیتواند حذف شود"
-
-#~ msgid "enigma2 and network"
-#~ msgstr "انیگما 2 و شبکه"
-
-#~ msgid "sort by date"
-#~ msgstr "چیدمان بر اساس تاریخ"
-
-#
-#~ msgid "was removed successfully"
-#~ msgstr "با موفقیت حذف شد"
-
-#~ msgid ""
-#~ "your STB_BOX might be unusable now. Please consult the "
-#~ "manual for further assistance before rebooting your STB_BOX."
-#~ msgstr ""
-#~ "دستگاه شما احتمالا غیر قابل استفاده شده است ، لطفا قبل از راه اندازی مجدد "
-#~ "دستگاه دفترچه راهنما را برای کمک بیشتر مطالعه کنید ، به شما توصیه میشود "
-#~ "دوباره ایمیج نصب کنید"
