--- a/po/fy.po
+++ b/po/fy.po
@@ -7,16 +7,13 @@ msgstr ""
 "Project-Id-Version: enigma2\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2012-09-28 16:57+0100\n"
-"PO-Revision-Date: 2012-07-11 17:32+0100\n"
+"PO-Revision-Date: 2012-09-30 00:52-0000\n"
 "Last-Translator: Andy Blackburn <andyblac@o2.co.uk>\n"
 "Language-Team: gerrit <fy@li.org>\n"
-"Language: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
-"X-Poedit-Language: Nederlands\n"
-"X-Poedit-Country: NEDERLAND\n"
 "X-Poedit-SourceCharset: iso-8859-15\n"
 "X-Generator: KBabel 1.11.4\n"
 
@@ -7419,8 +7416,7 @@ msgid ""
 msgstr ""
 
 msgid ""
-"Thank you for using the wizard. Your STB_BOX is now ready for "
-"use.\n"
+"Thank you for using the wizard. Your STB_BOX is now ready for use.\n"
 "Press OK to start using your receiver."
 msgstr ""
 
@@ -7437,11 +7433,11 @@ msgstr ""
 #
 msgid ""
 "The DVD standard doesn't support H.264 (HDTV) video streams. Do you want to "
-"create a STB_BOX format data DVD (which will not play in stand-"
-"alone DVD players) instead?"
+"create a STB_BOX format data DVD (which will not play in stand-alone DVD "
+"players) instead?"
 msgstr ""
-"De DVD standert kin gjin H.264 (HDTV) fideo streams an. Wolle jo dan in Vu+ "
-"Uno formaat data DVD meitsje ? Tink der om, dizze kin net in gewoane DVD "
+"De DVD standert kin gjin H.264 (HDTV) fideo streams an. Wolle jo dan in "
+"STB_BOX formaat data DVD meitsje ? Tink der om, dizze kin net in gewoane DVD "
 "spielers ôfspiele wurde !"
 
 msgid ""
@@ -7802,8 +7798,7 @@ msgstr ""
 
 msgid ""
 "This plugin creates a USB stick which can be used to update the firmware of "
-"your STB_BOX without the need for a network or WLAN "
-"connection.\n"
+"your STB_BOX without the need for a network or WLAN connection.\n"
 "First, a USB stick needs to be prepared so that it becomes bootable.\n"
 "In the next step, an NFI image file can be downloaded from the update server "
 "and saved on the USB stick.\n"
@@ -8768,21 +8763,19 @@ msgstr ""
 #
 msgid ""
 "Welcome to the Image upgrade wizard. The wizard will assist you in upgrading "
-"the firmware of your STB_BOX by providing a backup facility for "
-"your current settings and a short explanation of how to upgrade your "
-"firmware."
+"the firmware of your STB_BOX by providing a backup facility for your current "
+"settings and a short explanation of how to upgrade your firmware."
 msgstr ""
 "Wolkom by de byld bywurkje gucheler. De gucheler helpt jo by it bywurkjen "
-"fan de software yn jo STB_BOX, in backup mochelikhiid foar jo "
-"ynstellingen en in koarte útlis fan hoe de software by te wurkjen."
+"fan de software yn jo STB_BOX, in backup mochelikhiid foar jo ynstellingen "
+"en in koarte útlis fan hoe de software by te wurkjen."
 
 #
 msgid ""
 "Welcome.\n"
 "\n"
-"If you want to connect your STB_BOX to the Internet, this "
-"wizard will guide you through the basic network setup of your GigaBlue HD "
-"800 Solo.\n"
+"If you want to connect your STB_BOX to the Internet, this wizard will guide "
+"you through the basic network setup of your GigaBlue HD 800 Solo.\n"
 "\n"
 "Press OK to start configuring your network"
 msgstr ""
@@ -8904,8 +8897,7 @@ msgstr ""
 msgid ""
 "When you do a factory reset, you will lose ALL your configuration data\n"
 "(including bouquets, services, satellite data ...)\n"
-"After completion of factory reset, your STB_BOX will restart "
-"automatically!\n"
+"After completion of factory reset, your STB_BOX will restart automatically!\n"
 "\n"
 "Really do a factory reset?"
 msgstr ""
@@ -9138,24 +9130,23 @@ msgstr "Jo moatte %s wachtsje!"
 
 #
 msgid ""
-"You need a PC connected to your STB_BOX. If you need further "
-"instructions, please visit the website http://www.dm7025.de.\n"
-"Your STB_BOX will now be halted. After you have performed the "
-"update instructions from the website, your new firmware will ask you to "
-"restore your settings."
+"You need a PC connected to your STB_BOX. If you need further instructions, "
+"please visit the website http://www.dm7025.de.\n"
+"Your STB_BOX will now be halted. After you have performed the update "
+"instructions from the website, your new firmware will ask you to restore "
+"your settings."
 msgstr ""
-"De moat in PC oan de STB_BOX ansluten weze. Foar mear "
-"ynstruktiessjoch op de webside http://www.dm7025.de.\n"
-"Jo STB_BOX sil no stopje. Nei it bywurkjen neffens de webside, "
-"de neie software sil jo freegje om de oarspronkelike ynstellingen werom te "
-"setten."
+"De moat in PC oan de STB_BOX ansluten weze. Foar mear ynstruktiessjoch op de "
+"webside http://www.dm7025.de.\n"
+"Jo STB_BOX sil no stopje. Nei it bywurkjen neffens de webside, de neie "
+"software sil jo freegje om de oarspronkelike ynstellingen werom te setten."
 
 msgid "You system does not support ext4"
 msgstr ""
 
 msgid ""
-"Your STB_BOX is not connected to the internet, please check "
-"your network settings and try again."
+"Your STB_BOX is not connected to the internet, please check your network "
+"settings and try again."
 msgstr ""
 
 #
@@ -9187,27 +9178,24 @@ msgstr "Jo STB_BOX wurd no ôfsluten. Eefkes wachtsje..."
 
 #
 msgid ""
-"Your STB_BOX isn't connected to the internet properly. Please "
-"check it and try again."
+"Your STB_BOX isn't connected to the internet properly. Please check it and "
+"try again."
 msgstr ""
-"Jo STB_BOX is net goed ferbun mei it internet. Kontrolearje en "
-"besykje opnij."
+"Jo STB_BOX is net goed ferbun mei it internet. Kontrolearje en besykje opnij."
 
 msgid ""
-"Your STB_BOX might be unusable now. Please consult the manual "
-"for further assistance before rebooting your STB_BOX."
+"Your STB_BOX might be unusable now. Please consult the manual for further "
+"assistance before rebooting your STB_BOX."
 msgstr ""
 
 #, python-format
 msgid ""
-"Your STB_BOX will be restarted after the installation of "
-"service\n"
+"Your STB_BOX will be restarted after the installation of service\n"
 "Ready to install \"%s\" ?"
 msgstr ""
 
 msgid ""
-"Your STB_BOX will be restarted after the installation of "
-"service.\n"
+"Your STB_BOX will be restarted after the installation of service.\n"
 "\n"
 "Do you want to install now ?"
 msgstr ""
@@ -10958,471 +10946,3 @@ msgstr "knip"
 #
 msgid "zapped"
 msgstr "knipt"
-
-#
-#~ msgid "/usr/share/enigma2 directory"
-#~ msgstr "/usr/share/enigma2 map"
-
-#
-#~ msgid "/var directory"
-#~ msgstr "/var map"
-
-#
-#~ msgid "Action:"
-#~ msgstr "Aksje:"
-
-#
-#~ msgid "Advanced Video Setup"
-#~ msgstr "Afansjearre Fideo Ynstellingen"
-
-#
-#~ msgid ""
-#~ "After the start wizard is completed, you need to protect single services. "
-#~ "Refer to your STB_BOX's manual on how to do that."
-#~ msgstr ""
-#~ "Ot de startgucheler klear is, kinne jo in service befeilichje. Sjoch yn "
-#~ "'e hânlieding foar ynformaasje."
-
-#
-#~ msgid "All Satellites"
-#~ msgstr "Alle Satellyten"
-
-#
-#~ msgid "Ask before shutdown:"
-#~ msgstr "Freechje foar it útskeakeljen:"
-
-#
-#~ msgid "Backup"
-#~ msgstr "Backup"
-
-#
-#~ msgid "Backup Location"
-#~ msgstr "Backup Lokaasje"
-
-#
-#~ msgid "Backup Mode"
-#~ msgstr "Backup Mode"
-
-#
-#~ msgid ""
-#~ "By pressing the OK Button on your remote control, the info bar is being "
-#~ "displayed."
-#~ msgstr "By de Ok toets op jo ôfstansbetsjinning, wurd de ynfo balke toant"
-
-#
-#~ msgid "CF Drive"
-#~ msgstr "CF Drive"
-
-#
-#~ msgid ""
-#~ "Delete no more configured satellite\n"
-#~ "%s?"
-#~ msgstr ""
-#~ "Ferwiderje de net brûkte satellyt\n"
-#~ "%s?"
-
-#
-#~ msgid "Disable timer"
-#~ msgstr "Tiidstjoering útskeakelje"
-
-#
-#~ msgid "Display Setup"
-#~ msgstr "Ynstellingen sjen litte"
-
-#
-#~ msgid ""
-#~ "Do you want to backup now?\n"
-#~ "After pressing OK, please wait!"
-#~ msgstr ""
-#~ "Wolle jo no in backup meitsje?\n"
-#~ "Nei OK, eefkes wachtsje"
-
-#
-#~ msgid ""
-#~ "Do you want to enable the parental control feature on your GigaBlue HD "
-#~ "800 Solo?"
-#~ msgstr "Wolle jo it berne slot ynskeakelje ?"
-
-#
-#~ msgid ""
-#~ "Do you want to update your STB_BOX?\n"
-#~ "After pressing OK, please wait!"
-#~ msgstr ""
-#~ "Wolle jo jo STB_BOX bywurkje ?\n"
-#~ "Nei Ok, eefkes geduld !"
-
-#
-#~ msgid "Do you want to view a tutorial?"
-#~ msgstr "Wolle jo in foarbyld sjen ?"
-
-#
-#~ msgid "Done - Installed or upgraded %d packages"
-#~ msgstr "Dien - %d paket(ten) ynstalllearre of bywurke"
-
-#
-#~ msgid "Installing default sat lists... Please wait..."
-#~ msgstr "Standert sat lyst oan it ynstalearjen... "
-
-#
-#~ msgid "Installing defaults... Please wait..."
-#~ msgstr "Standert waarden an it ynstellen..."
-
-#
-#~ msgid "Installing package content... Please wait..."
-#~ msgstr "Pakket ynhald an it ynstallearjen... Eefkes wachtsje"
-
-#
-#~ msgid "Keyboard Setup"
-#~ msgstr "Toetseboerd Ynstellingen"
-
-#
-#~ msgid "LOF"
-#~ msgstr "LOF"
-
-#
-#~ msgid "LOF/H"
-#~ msgstr "LOF/H"
-
-#
-#~ msgid "LOF/L"
-#~ msgstr "LOF/L"
-
-#
-#~ msgid "Mode"
-#~ msgstr "Moadus"
-
-#
-#~ msgid ""
-#~ "No packages were upgraded yet. So you can check your network and try "
-#~ "again."
-#~ msgstr "Pakketten bin net bywurke. Besjoch it netwurk en besykje opnei."
-
-#
-#~ msgid "Please choose he package..."
-#~ msgstr "Kies it pakket..."
-
-#
-#~ msgid "Please choose the default services lists you want to install."
-#~ msgstr "Kies de standert lysts, welk jo  ynstallearje wolle."
-
-#
-#~ msgid "Please press OK!"
-#~ msgstr "Druk Ok!"
-
-#
-#~ msgid "Refresh Rate"
-#~ msgstr "Fernij faasje"
-
-#
-#~ msgid "Sat / Dish Setup"
-#~ msgstr "Sat / Panne Ynstellingen"
-
-#
-#~ msgid "Scan QAM128"
-#~ msgstr "Sykje QAM128"
-
-#
-#~ msgid "Scan QAM16"
-#~ msgstr "Sykje QAM16"
-
-#
-#~ msgid "Scan QAM256"
-#~ msgstr "Sykje QAM256"
-
-#
-#~ msgid "Scan QAM32"
-#~ msgstr "Sykje QAM32"
-
-#
-#~ msgid "Scan QAM64"
-#~ msgstr "Sykje QAM64"
-
-#
-#~ msgid "Scan SR6875"
-#~ msgstr "Sykje SR6875"
-
-#
-#~ msgid "Scan SR6900"
-#~ msgstr "Sykje SR6900"
-
-#
-#~ msgid "Scan band EU HYPER"
-#~ msgstr "Sykje op bân EU HYPER"
-
-#
-#~ msgid "Scan band EU MID"
-#~ msgstr "Sykje op bân EU MID"
-
-#
-#~ msgid "Scan band EU SUPER"
-#~ msgstr "Sykje op bân EU SUPER"
-
-#
-#~ msgid "Scan band EU UHF IV"
-#~ msgstr "Sykje op bân EU UHF IV"
-
-#
-#~ msgid "Scan band EU UHF V"
-#~ msgstr "Sykje op bân EU UHF V"
-
-#
-#~ msgid "Scan band EU VHF I"
-#~ msgstr "Sykje op bân EU VHF I"
-
-#
-#~ msgid "Scan band EU VHF III"
-#~ msgstr "Sykje op bân EU VHF III"
-
-#
-#~ msgid "Scan band US HIGH"
-#~ msgstr "Sykje op bân US HIGH"
-
-#
-#~ msgid "Scan band US HYPER"
-#~ msgstr "Sykje op bân US HYPER"
-
-#
-#~ msgid "Scan band US LOW"
-#~ msgstr "Sykje op bân US LOW"
-
-#
-#~ msgid "Scan band US MID"
-#~ msgstr "Sykje op bân US MID"
-
-#
-#~ msgid "Scan band US SUPER"
-#~ msgstr "Sykje op bân US SUPER"
-
-#
-#~ msgid "Service Searching"
-#~ msgstr "Kanalen sykje"
-
-#
-#~ msgid "Set Voltage and 22KHz"
-#~ msgstr "Set spanning en 22 kHz"
-
-#
-#~ msgid "Shutdown STB_BOX after"
-#~ msgstr "STB_BOX útskeakelje nei"
-
-#
-#~ msgid "Sleep timer action:"
-#~ msgstr "Sleep tiid barren aksje:"
-
-#
-#~ msgid ""
-#~ "Sorry your Backup destination does not exist\n"
-#~ "\n"
-#~ "Please choose an other one."
-#~ msgstr ""
-#~ "Sorry.. Jo Reserve kopie plak bestiit net\n"
-#~ "\n"
-#~ "Kies in oar plak aub..."
-
-#
-#~ msgid ""
-#~ "Thank you for using the wizard. Your STB_BOX is now ready to "
-#~ "use.\n"
-#~ "Please press OK to start using your STB_BOX."
-#~ msgstr ""
-#~ "Bedankt foar it brûken fan de gucheler. Jo STB_BOX is no "
-#~ "klear om te brûken.\n"
-#~ "Druk OK om mei de STB_BOX te begjinnen."
-
-#
-#~ msgid "The installation of the default services lists is finished."
-#~ msgstr "Ynstalaasje fan standert ynstellingen is klear."
-
-#
-#~ msgid ""
-#~ "The installation of the default settings is finished. You can now "
-#~ "continue configuring your STB_BOX by pressing the OK button "
-#~ "on the remote control."
-#~ msgstr ""
-#~ "Standert ynstellingen binne werom set. Jo kinne fierder gean mei it "
-#~ "ynstellen fan de STB_BOX troch OK te drukken op de "
-#~ "ôfstandsbetsjinning"
-
-#
-#~ msgid "The package doesn't contain anything."
-#~ msgstr "It pakket hat gjin ynhâld"
-
-#
-#~ msgid "There are no default services lists in your image."
-#~ msgstr "Der binne gjin standert lysts yn de STB_BOX"
-
-#
-#~ msgid "There are no default settings in your image."
-#~ msgstr "Der binne gjin standert ynstellingen yn jo byld"
-
-#
-#~ msgid "This is step number 2."
-#~ msgstr "Dit is stap nûmer 2."
-
-#
-#~ msgid ""
-#~ "This test checks whether your LAN Adapter is set up for automatic IP "
-#~ "Address configuration with DHCP.\n"
-#~ "If you get a \"disabled\" message:\n"
-#~ " - then your LAN Adapter is configured for manual IP Setup\n"
-#~ "- verify thay you have entered correct IP informations in the "
-#~ "AdapterSetup dialog.\n"
-#~ "If you get an \"enabeld\" message:\n"
-#~ "-verify that you have a configured and working DHCP Server in your "
-#~ "network."
-#~ msgstr ""
-#~ "Dizze test sjocht ot de LAN adapter ynsteld is foar automatysk IP Adres "
-#~ "ferkrije troch DHCP.\n"
-#~ "Krije jo in \"útskeakele\" berjocht :\n"
-#~ "- In hânmatig IP adres is ynstelt ?\n"
-#~ "- Is de ynjûne IP ynformaasje goed, yn it Adapterynstellingen menu ?\n"
-#~ "Krije jo in \"ynskeakele\" berjocht :\n"
-#~ "- Is der ek een DHCP server aktyf yn jo netwurk ?"
-
-#
-#~ msgid "Tuner "
-#~ msgstr "Tuner"
-
-#
-#~ msgid "USB Stick"
-#~ msgstr "USB Stick"
-
-#
-#~ msgid "Updates your STB_BOX's software"
-#~ msgstr "UntfangerSoftware bywurkje"
-
-#
-#~ msgid "Updating finished. Here is the result:"
-#~ msgstr "Klear met bywurkjen. Dit hat allegear bart :"
-
-#
-#~ msgid "Updating... Please wait... This can take some minutes..."
-#~ msgstr "Bywurkjen is dwaande. Waachtje even. Dit kin inkele minuten duorje."
-
-#
-#~ msgid "Upgrade finished. Do you want to reboot your STB_BOX?"
-#~ msgstr "Klear mei bywurkjen. Wolle jo de STB_BOX opnij starte?"
-
-#
-#~ msgid "Upgrading STB_BOX... Please wait"
-#~ msgstr "STB_BOX an it bywurkjen..."
-
-#
-#~ msgid "Use Power Measurement"
-#~ msgstr "Bruk Enerzy behear"
-
-#
-#~ msgid ""
-#~ "Use the left and right buttons to change an option.\n"
-#~ "\n"
-#~ "Please set up tuner A"
-#~ msgstr ""
-#~ "Knoppen links en rjochts brûke om in opsje te feroarjen.\n"
-#~ "\n"
-#~ "Stel tuner A yn"
-
-#
-#~ msgid "Use usals for this sat"
-#~ msgstr "USALS foar dizze satellyt brûke"
-
-#
-#~ msgid "Video Fine-Tuning Wizard"
-#~ msgstr "Fideo fyn ynstel gucheler"
-
-#
-#~ msgid "Video Output"
-#~ msgstr "Fideo útgong"
-
-#
-#~ msgid "Video Setup"
-#~ msgstr "Fideo ynstellingen"
-
-#
-#~ msgid "Video Wizard"
-#~ msgstr "Fideo gucheler"
-
-#
-#~ msgid ""
-#~ "Welcome.\n"
-#~ "\n"
-#~ "This start wizard will guide you through the basic setup of your Xtrend "
-#~ "ET9.\n"
-#~ "Press the OK button on your remote control to move to the next step."
-#~ msgstr ""
-#~ "Wolkom.\n"
-#~ "\n"
-#~ "Dizze gucheler helpt jo troch de basis ynstellingen fan jo GigaBlue HD "
-#~ "800 Solo.\n"
-#~ "Druk Ok op jo ôfstandsbetsjinning om nei de folgende stap te gean."
-
-#
-#~ msgid "Yes, view the tutorial"
-#~ msgstr "Ja, besjoch de hânlieding"
-
-#
-#~ msgid ""
-#~ "You can choose some default settings now. Please select the settings you "
-#~ "want to be installed."
-#~ msgstr ""
-#~ "Jo kinne inkele ynstellingen dwaan no. Kies de ynstellingen die't jo "
-#~ "ynstallearje wolle"
-
-#
-#~ msgid "You can choose, what you want to install..."
-#~ msgstr "Jo kinne kieze wat te ynstallearen"
-
-#
-#~ msgid "You chose not to install any default services lists."
-#~ msgstr "Jo hawwe koazen gjin standert kanaallysten te ynstallearjen."
-
-#
-#~ msgid ""
-#~ "You chose not to install any default settings. You can however install "
-#~ "the default settings later in the settings menu."
-#~ msgstr ""
-#~ "Jo hawwe koazen gjin standert ynstellingen te ynstallearjen. Jo kinne "
-#~ "letter dit altiid nog dwaan in it ynstellingen menu"
-
-#
-#~ msgid ""
-#~ "You chose not to install anything. Please press OK finish the install "
-#~ "wizard."
-#~ msgstr ""
-#~ "Jo hawwe koazen neat te ynstallearjen. Druk OK om de gucheler ôf te "
-#~ "slúten."
-
-#
-#~ msgid "alphabetic sort"
-#~ msgstr "sortearje op alfabet"
-
-#
-#~ msgid ""
-#~ "are you sure you want to restore\n"
-#~ "following backup:\n"
-#~ msgstr ""
-#~ "witte jo seker dizze werom te setten\n"
-#~ "de extra kopie:\n"
-
-#
-#~ msgid "enigma2 and network"
-#~ msgstr "enigma2 en netwurk"
-
-#
-#~ msgid "shutdown"
-#~ msgstr "útskeakelje"
-
-#
-#~ msgid "sort by date"
-#~ msgstr "sortearje op datum"
-
-#
-#~ msgid "standby"
-#~ msgstr "paraatstand"
-
-#
-#~ msgid ""
-#~ "your STB_BOX might be unusable now. Please consult the "
-#~ "manual for further assistance before rebooting your STB_BOX."
-#~ msgstr ""
-#~ "jo STB_BOX is miskien no net brûkber. sjoch yn de hanlieding "
-#~ "foar jo jo Vu+ Uno opnij starte."
