--- a/po/hr.po
+++ b/po/hr.po
@@ -5,7 +5,7 @@ msgstr ""
 "Project-Id-Version: enigma2\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2012-09-28 16:57+0100\n"
-"PO-Revision-Date: 2012-09-14 19:17-0000\n"
+"PO-Revision-Date: 2012-09-30 00:52-0000\n"
 "Last-Translator: Andy Blackburn <andyblac@o2.co.uk>\n"
 "Language-Team:  <jurica@dream-multimedia.eu>\n"
 "Language: hr_HR\n"
@@ -7386,8 +7386,7 @@ msgid ""
 msgstr ""
 
 msgid ""
-"Thank you for using the wizard. Your STB_BOX is now ready for "
-"use.\n"
+"Thank you for using the wizard. Your STB_BOX is now ready for use.\n"
 "Press OK to start using your receiver."
 msgstr ""
 
@@ -7404,8 +7403,8 @@ msgstr ""
 #
 msgid ""
 "The DVD standard doesn't support H.264 (HDTV) video streams. Do you want to "
-"create a STB_BOX format data DVD (which will not play in stand-"
-"alone DVD players) instead?"
+"create a STB_BOX format data DVD (which will not play in stand-alone DVD "
+"players) instead?"
 msgstr ""
 
 msgid ""
@@ -7755,8 +7754,7 @@ msgstr ""
 
 msgid ""
 "This plugin creates a USB stick which can be used to update the firmware of "
-"your STB_BOX without the need for a network or WLAN "
-"connection.\n"
+"your STB_BOX without the need for a network or WLAN connection.\n"
 "First, a USB stick needs to be prepared so that it becomes bootable.\n"
 "In the next step, an NFI image file can be downloaded from the update server "
 "and saved on the USB stick.\n"
@@ -8701,22 +8699,20 @@ msgstr ""
 #
 msgid ""
 "Welcome to the Image upgrade wizard. The wizard will assist you in upgrading "
-"the firmware of your STB_BOX by providing a backup facility for "
-"your current settings and a short explanation of how to upgrade your "
-"firmware."
+"the firmware of your STB_BOX by providing a backup facility for your current "
+"settings and a short explanation of how to upgrade your firmware."
 msgstr ""
 "Dobro došli u čarobnjaka za nadogradnju softvera. Čarobnjak će vam pomoći "
-"tokom nadogradnje Softvera na vašem STB_BOX-u s pružanjem "
-"sigurnosne kopije vaših trenutnih postavki te kratkim objašnjenjem kako "
-"nadograditi vaš Softver."
+"tokom nadogradnje Softvera na vašem STB_BOX-u s pružanjem sigurnosne kopije "
+"vaših trenutnih postavki te kratkim objašnjenjem kako nadograditi vaš "
+"Softver."
 
 #
 msgid ""
 "Welcome.\n"
 "\n"
-"If you want to connect your STB_BOX to the Internet, this "
-"wizard will guide you through the basic network setup of your GigaBlue HD "
-"800 Solo.\n"
+"If you want to connect your STB_BOX to the Internet, this wizard will guide "
+"you through the basic network setup of your GigaBlue HD 800 Solo.\n"
 "\n"
 "Press OK to start configuring your network"
 msgstr ""
@@ -8838,8 +8834,7 @@ msgstr ""
 msgid ""
 "When you do a factory reset, you will lose ALL your configuration data\n"
 "(including bouquets, services, satellite data ...)\n"
-"After completion of factory reset, your STB_BOX will restart "
-"automatically!\n"
+"After completion of factory reset, your STB_BOX will restart automatically!\n"
 "\n"
 "Really do a factory reset?"
 msgstr ""
@@ -9070,24 +9065,24 @@ msgstr "Morate pričekati %s!"
 
 #
 msgid ""
-"You need a PC connected to your STB_BOX. If you need further "
-"instructions, please visit the website http://www.dm7025.de.\n"
-"Your STB_BOX will now be halted. After you have performed the "
-"update instructions from the website, your new firmware will ask you to "
-"restore your settings."
+"You need a PC connected to your STB_BOX. If you need further instructions, "
+"please visit the website http://www.dm7025.de.\n"
+"Your STB_BOX will now be halted. After you have performed the update "
+"instructions from the website, your new firmware will ask you to restore "
+"your settings."
 msgstr ""
-"Vi trebate PC spojen s vašim STB_BOXom. Ukoliko trebate dodatne "
-"instrukcije, molim posjetite ovu stranicu http://www.dm7025.de.\n"
-"Vaš STB_BOX će sada stati. Nakon što ste izvršili proceduru "
-"nadogradnje prema uputama s Web stranice, vaš novi softver će vas pitati "
-"želite li vratiti sigurnosnu kopiju vaših postavki."
+"Vi trebate PC spojen s vašim STB_BOXom. Ukoliko trebate dodatne instrukcije, "
+"molim posjetite ovu stranicu http://www.dm7025.de.\n"
+"Vaš STB_BOX će sada stati. Nakon što ste izvršili proceduru nadogradnje "
+"prema uputama s Web stranice, vaš novi softver će vas pitati želite li "
+"vratiti sigurnosnu kopiju vaših postavki."
 
 msgid "You system does not support ext4"
 msgstr ""
 
 msgid ""
-"Your STB_BOX is not connected to the internet, please check "
-"your network settings and try again."
+"Your STB_BOX is not connected to the internet, please check your network "
+"settings and try again."
 msgstr ""
 
 #
@@ -9119,27 +9114,25 @@ msgstr "Vaš STB_BOX se gasi sada."
 
 #
 msgid ""
-"Your STB_BOX isn't connected to the internet properly. Please "
-"check it and try again."
+"Your STB_BOX isn't connected to the internet properly. Please check it and "
+"try again."
 msgstr ""
-"Vaš STB_BOX nije ispravno spojen na internet. Molim provjerite "
-"postavke i pokušajte ponovno."
+"Vaš STB_BOX nije ispravno spojen na internet. Molim provjerite postavke i "
+"pokušajte ponovno."
 
 msgid ""
-"Your STB_BOX might be unusable now. Please consult the manual "
-"for further assistance before rebooting your STB_BOX."
+"Your STB_BOX might be unusable now. Please consult the manual for further "
+"assistance before rebooting your STB_BOX."
 msgstr ""
 
 #, python-format
 msgid ""
-"Your STB_BOX will be restarted after the installation of "
-"service\n"
+"Your STB_BOX will be restarted after the installation of service\n"
 "Ready to install \"%s\" ?"
 msgstr ""
 
 msgid ""
-"Your STB_BOX will be restarted after the installation of "
-"service.\n"
+"Your STB_BOX will be restarted after the installation of service.\n"
 "\n"
 "Do you want to install now ?"
 msgstr ""
@@ -10889,298 +10882,3 @@ msgstr "zap"
 #
 msgid "zapped"
 msgstr "prebačen"
-
-#
-#~ msgid "/usr/share/enigma2 directory"
-#~ msgstr "/usr/share/enigma2 direktorij"
-
-#
-#~ msgid "/var directory"
-#~ msgstr "/var direktorij"
-
-#
-#~ msgid "Advanced Video Setup"
-#~ msgstr "Napredne video postavke"
-
-#
-#~ msgid ""
-#~ "After the start wizard is completed, you need to protect single services. "
-#~ "Refer to your STB_BOX's manual on how to do that."
-#~ msgstr ""
-#~ "Nakon što Čarobnjak završi, vi trebate zaštititi pojedine usluge. "
-#~ "Pogledajte u korisničke upute kako to učiniti."
-
-#
-#~ msgid "Backup"
-#~ msgstr "Sigurnosna kopija"
-
-#
-#~ msgid "Backup Location"
-#~ msgstr "Lokacija sigurnosne kopije"
-
-#
-#~ msgid "Backup Mode"
-#~ msgstr "Mod sigurnosne kopije"
-
-#
-#~ msgid ""
-#~ "By pressing the OK Button on your remote control, the info bar is being "
-#~ "displayed."
-#~ msgstr ""
-#~ "Pritiskom na tipku OK bežičnog upravljača, info traka bit će prikazana."
-
-#
-#~ msgid "CF Drive"
-#~ msgstr "CF Disk"
-
-#
-#~ msgid ""
-#~ "Do you want to backup now?\n"
-#~ "After pressing OK, please wait!"
-#~ msgstr ""
-#~ "Želite li napraviti sigurnosnu kopiju sada?\n"
-#~ "Nakon pritiska tipke OK, molim pričekajte!"
-
-#
-#~ msgid ""
-#~ "Do you want to enable the parental control feature on your GigaBlue HD "
-#~ "800 Solo?"
-#~ msgstr ""
-#~ "Želite li uključiti roditeljsku kontrolu na vašem STB_BOX-u?"
-
-#
-#~ msgid ""
-#~ "Do you want to update your STB_BOX?\n"
-#~ "After pressing OK, please wait!"
-#~ msgstr ""
-#~ "Želite li nadograditi vaš STB_BOX?\n"
-#~ "Nakon pritiska tipke OK, molim pričekajte!"
-
-#
-#~ msgid "Do you want to view a tutorial?"
-#~ msgstr "Želite li pogledati vodič?"
-
-#
-#~ msgid "Done - Installed or upgraded %d packages"
-#~ msgstr "Učinjeno - Instalirano i nadograđeno %d paketa"
-
-#
-#~ msgid "LOF"
-#~ msgstr "LOF"
-
-#
-#~ msgid "LOF/H"
-#~ msgstr "LOFH"
-
-#
-#~ msgid "LOF/L"
-#~ msgstr "LOF/L"
-
-#
-#~ msgid "Mode"
-#~ msgstr "Mod"
-
-#
-#~ msgid ""
-#~ "No packages were upgraded yet. So you can check your network and try "
-#~ "again."
-#~ msgstr ""
-#~ "Niti jedan paket nije nadograđen još.Tako da možete provjeriti postavke "
-#~ "mreže i pokušajte ponovno."
-
-#
-#~ msgid "Please press OK!"
-#~ msgstr "Molim pritisnite OK!"
-
-#
-#~ msgid "Refresh Rate"
-#~ msgstr "Brzina osvježavanja"
-
-#
-#~ msgid "Scan QAM128"
-#~ msgstr "Skeniraj QAM128"
-
-#
-#~ msgid "Scan QAM16"
-#~ msgstr "Skeniraj QAM16"
-
-#
-#~ msgid "Scan QAM256"
-#~ msgstr "Skeniraj QAM256"
-
-#
-#~ msgid "Scan QAM32"
-#~ msgstr "Skeniraj QAM32"
-
-#
-#~ msgid "Scan QAM64"
-#~ msgstr "Skeniraj QAM64"
-
-#
-#~ msgid "Scan SR6875"
-#~ msgstr "Skeniraj SR6875"
-
-#
-#~ msgid "Scan SR6900"
-#~ msgstr "Skeniraj SR6900"
-
-#
-#~ msgid "Scan band EU HYPER"
-#~ msgstr "Skeniraj band EU HYPER"
-
-#
-#~ msgid "Scan band EU MID"
-#~ msgstr "Skeniraj band EU MID"
-
-#
-#~ msgid "Scan band EU SUPER"
-#~ msgstr "Skeniraj band EU SUPER"
-
-#
-#~ msgid "Scan band EU UHF IV"
-#~ msgstr "Skeniraj band EU UHF IV"
-
-#
-#~ msgid "Scan band EU UHF V"
-#~ msgstr "Skeniraj band EU UHF V"
-
-#
-#~ msgid "Scan band EU VHF I"
-#~ msgstr "Skeniraj band EU VHF I"
-
-#
-#~ msgid "Scan band EU VHF III"
-#~ msgstr "Skeniraj band EU VHF III"
-
-#
-#~ msgid "Scan band US HIGH"
-#~ msgstr "Skeniraj band US HIGH"
-
-#
-#~ msgid "Scan band US HYPER"
-#~ msgstr "Skeniraj band US HYPER"
-
-#
-#~ msgid "Scan band US LOW"
-#~ msgstr "Skeniraj band US LOW"
-
-#
-#~ msgid "Scan band US MID"
-#~ msgstr "Skeniraj band US MID"
-
-#
-#~ msgid "Scan band US SUPER"
-#~ msgstr "Skeniraj band US SUPER"
-
-#
-#~ msgid ""
-#~ "Sorry your Backup destination does not exist\n"
-#~ "\n"
-#~ "Please choose an other one."
-#~ msgstr ""
-#~ "Oprostite, vaša destinacija za sigurnosnu kopiju ne postoji\n"
-#~ "\n"
-#~ "Molim odaberite drugu lokaciju."
-
-#
-#~ msgid ""
-#~ "Thank you for using the wizard. Your STB_BOX is now ready to "
-#~ "use.\n"
-#~ "Please press OK to start using your STB_BOX."
-#~ msgstr ""
-#~ "Hvala vam na korištenju čarobnjaka. Vaš prijemnik je sada spreman za "
-#~ "korištenje.\n"
-#~ "Molim pritisnite tipku OK za start vašeg STB_BOX-a."
-
-#
-#~ msgid "This is step number 2."
-#~ msgstr "Ovo je korak broj 2."
-
-#
-#~ msgid "Tuner "
-#~ msgstr "Tuner"
-
-#
-#~ msgid "USB Stick"
-#~ msgstr "USB Disk"
-
-#
-#~ msgid "Updates your STB_BOX's software"
-#~ msgstr "Nadograđuje softver vašeg prijemnika"
-
-#
-#~ msgid "Updating finished. Here is the result:"
-#~ msgstr "Nadogradnja uspješna. Ovo su rezultati:"
-
-#
-#~ msgid "Updating... Please wait... This can take some minutes..."
-#~ msgstr ""
-#~ "Nadograđujem... Molim pričekajte... To može potrajati nekoliko minuta..."
-
-#
-#~ msgid "Upgrade finished. Do you want to reboot your STB_BOX?"
-#~ msgstr ""
-#~ "Nadogradnja uspješna. Želite li sada restartati STB_BOX?"
-
-#
-#~ msgid "Upgrading STB_BOX... Please wait"
-#~ msgstr "Nadograđujem STB_BOX... Molim pričekajte"
-
-#
-#~ msgid "Use Power Measurement"
-#~ msgstr "Koristi Mjerenje Snage"
-
-#
-#~ msgid ""
-#~ "Use the left and right buttons to change an option.\n"
-#~ "\n"
-#~ "Please set up tuner A"
-#~ msgstr ""
-#~ "Koristite lijeve i desne tipke za promjenu opcija.\n"
-#~ "\n"
-#~ "Molim podesite tuner A"
-
-#
-#~ msgid "Use usals for this sat"
-#~ msgstr "Koristi USALS za ovaj satelit"
-
-#
-#~ msgid "Video Output"
-#~ msgstr "Video izlaz"
-
-#
-#~ msgid "Video Setup"
-#~ msgstr "Video postavke"
-
-#
-#~ msgid "Video Wizard"
-#~ msgstr "Video čarobnjak"
-
-#
-#~ msgid "Yes, view the tutorial"
-#~ msgstr "Da, prikaži vodič"
-
-#
-#~ msgid "alphabetic sort"
-#~ msgstr "sortiraj abecedno"
-
-#
-#~ msgid ""
-#~ "are you sure you want to restore\n"
-#~ "following backup:\n"
-#~ msgstr ""
-#~ "Želite li stvarno vratiti sljedeću\n"
-#~ "sigurnosnu kopiju:\n"
-
-#
-#~ msgid "sort by date"
-#~ msgstr "sortiraj po datumu"
-
-#
-#~ msgid ""
-#~ "your STB_BOX might be unusable now. Please consult the "
-#~ "manual for further assistance before rebooting your STB_BOX."
-#~ msgstr ""
-#~ "vaš STB_BOX može biti sada nemoguće za koristiti. Molim "
-#~ "konzultirajte se s korisničkim uputama za daljnju pomoć prije rebootanja "
-#~ "vašeg STB_BOX-a."
