--- a/po/lv.po
+++ b/po/lv.po
@@ -5,7 +5,7 @@ msgstr ""
 "Project-Id-Version: enigma2\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2012-09-28 16:57+0100\n"
-"PO-Revision-Date: 2012-09-14 19:17-0000\n"
+"PO-Revision-Date: 2012-09-30 00:52-0000\n"
 "Last-Translator: Andy Blackburn <andyblac@o2.co.uk>\n"
 "Language-Team: Ivo / enigma2 (c) <ivog@apolllo.lv>\n"
 "Language: lv_LV\n"
@@ -1887,8 +1887,7 @@ msgstr ""
 
 #
 msgid "Could not connect to STB_BOX .NFI Image Feed Server:"
-msgstr ""
-"Nevar savienoties ar STB_BOX .NFI imidža barotnes serveris:"
+msgstr "Nevar savienoties ar STB_BOX .NFI imidža barotnes serveris:"
 
 msgid "Could not find installed channel list."
 msgstr ""
@@ -7472,8 +7471,7 @@ msgid ""
 msgstr ""
 
 msgid ""
-"Thank you for using the wizard. Your STB_BOX is now ready for "
-"use.\n"
+"Thank you for using the wizard. Your STB_BOX is now ready for use.\n"
 "Press OK to start using your receiver."
 msgstr ""
 
@@ -7490,12 +7488,12 @@ msgstr ""
 #
 msgid ""
 "The DVD standard doesn't support H.264 (HDTV) video streams. Do you want to "
-"create a STB_BOX format data DVD (which will not play in stand-"
-"alone DVD players) instead?"
+"create a STB_BOX format data DVD (which will not play in stand-alone DVD "
+"players) instead?"
 msgstr ""
 "DVD standarts neatbalsta H.264 (HDTV) attēla plūsmas. Vai jūs tā vietā "
-"vēlaties izveidot STB_BOX formāta datu DVD (kuru nevarēs "
-"izmantot standarta DVD atskaņotājos)?"
+"vēlaties izveidot STB_BOX formāta datu DVD (kuru nevarēs izmantot standarta "
+"DVD atskaņotājos)?"
 
 msgid ""
 "The EPGSearch plugin is not installed!\n"
@@ -7856,8 +7854,7 @@ msgstr ""
 
 msgid ""
 "This plugin creates a USB stick which can be used to update the firmware of "
-"your STB_BOX without the need for a network or WLAN "
-"connection.\n"
+"your STB_BOX without the need for a network or WLAN connection.\n"
 "First, a USB stick needs to be prepared so that it becomes bootable.\n"
 "In the next step, an NFI image file can be downloaded from the update server "
 "and saved on the USB stick.\n"
@@ -8829,21 +8826,19 @@ msgstr ""
 #
 msgid ""
 "Welcome to the Image upgrade wizard. The wizard will assist you in upgrading "
-"the firmware of your STB_BOX by providing a backup facility for "
-"your current settings and a short explanation of how to upgrade your "
-"firmware."
+"the firmware of your STB_BOX by providing a backup facility for your current "
+"settings and a short explanation of how to upgrade your firmware."
 msgstr ""
-"Sveicināti imidža atjaunināšanas vednī. Vednis palīdzēs Jums atjaunot Vu+ "
-"Uno programmatūru, sniedzot pašreizējo iestatījumu dublējumkopēšanas "
+"Sveicināti imidža atjaunināšanas vednī. Vednis palīdzēs Jums atjaunot "
+"STB_BOX programmatūru, sniedzot pašreizējo iestatījumu dublējumkopēšanas "
 "iespējas, kā arī īsumā izskaidros, kā veikt programmatūras atjaunināšanu."
 
 #
 msgid ""
 "Welcome.\n"
 "\n"
-"If you want to connect your STB_BOX to the Internet, this "
-"wizard will guide you through the basic network setup of your GigaBlue HD "
-"800 Solo.\n"
+"If you want to connect your STB_BOX to the Internet, this wizard will guide "
+"you through the basic network setup of your GigaBlue HD 800 Solo.\n"
 "\n"
 "Press OK to start configuring your network"
 msgstr ""
@@ -8965,8 +8960,7 @@ msgstr ""
 msgid ""
 "When you do a factory reset, you will lose ALL your configuration data\n"
 "(including bouquets, services, satellite data ...)\n"
-"After completion of factory reset, your STB_BOX will restart "
-"automatically!\n"
+"After completion of factory reset, your STB_BOX will restart automatically!\n"
 "\n"
 "Really do a factory reset?"
 msgstr ""
@@ -9208,25 +9202,24 @@ msgstr "Jums jāuzgaida %s!"
 
 #
 msgid ""
-"You need a PC connected to your STB_BOX. If you need further "
-"instructions, please visit the website http://www.dm7025.de.\n"
-"Your STB_BOX will now be halted. After you have performed the "
-"update instructions from the website, your new firmware will ask you to "
-"restore your settings."
+"You need a PC connected to your STB_BOX. If you need further instructions, "
+"please visit the website http://www.dm7025.de.\n"
+"Your STB_BOX will now be halted. After you have performed the update "
+"instructions from the website, your new firmware will ask you to restore "
+"your settings."
 msgstr ""
-"Personālajam datoram jābūt savienotam ar STB_BOX. Ja Jums ir "
-"nepieciešamas turpmākas instrukcijas, lūdzu apmeklējiet vietni http://www."
-"dm7025.de.\n"
-"STB_BOX tagad tiks apturēts. Pēc tam, kad būs izpildītas "
-"atjaunināšanas instrukcijas no tīkla vietnes, jaunā programmatūra piedāvās "
-"Jums atjaunot iestatījumus."
+"Personālajam datoram jābūt savienotam ar STB_BOX. Ja Jums ir nepieciešamas "
+"turpmākas instrukcijas, lūdzu apmeklējiet vietni http://www.dm7025.de.\n"
+"STB_BOX tagad tiks apturēts. Pēc tam, kad būs izpildītas atjaunināšanas "
+"instrukcijas no tīkla vietnes, jaunā programmatūra piedāvās Jums atjaunot "
+"iestatījumus."
 
 msgid "You system does not support ext4"
 msgstr ""
 
 msgid ""
-"Your STB_BOX is not connected to the internet, please check "
-"your network settings and try again."
+"Your STB_BOX is not connected to the internet, please check your network "
+"settings and try again."
 msgstr ""
 
 #
@@ -9258,27 +9251,24 @@ msgstr "STB_BOX izslēdzas. Lūdzu gaidiet..."
 
 #
 msgid ""
-"Your STB_BOX isn't connected to the internet properly. Please "
-"check it and try again."
+"Your STB_BOX isn't connected to the internet properly. Please check it and "
+"try again."
 msgstr ""
-"STB_BOX nav pievienots internetam kā nākas. Lūdzu pārbaudiet un "
-"mēģiniet vēl."
+"STB_BOX nav pievienots internetam kā nākas. Lūdzu pārbaudiet un mēģiniet vēl."
 
 msgid ""
-"Your STB_BOX might be unusable now. Please consult the manual "
-"for further assistance before rebooting your STB_BOX."
+"Your STB_BOX might be unusable now. Please consult the manual for further "
+"assistance before rebooting your STB_BOX."
 msgstr ""
 
 #, python-format
 msgid ""
-"Your STB_BOX will be restarted after the installation of "
-"service\n"
+"Your STB_BOX will be restarted after the installation of service\n"
 "Ready to install \"%s\" ?"
 msgstr ""
 
 msgid ""
-"Your STB_BOX will be restarted after the installation of "
-"service.\n"
+"Your STB_BOX will be restarted after the installation of service.\n"
 "\n"
 "Do you want to install now ?"
 msgstr ""
@@ -11032,443 +11022,3 @@ msgstr "pārslēgt"
 #
 msgid "zapped"
 msgstr "pārslēgts"
-
-#
-#~ msgid ""
-#~ "\n"
-#~ "System will restart after the restore!"
-#~ msgstr ""
-#~ "\n"
-#~ "Sistēma restartēsies pēc atjaunošanas!"
-
-#
-#~ msgid "/usr/share/enigma2 directory"
-#~ msgstr "/usr/share/enigma2 katalogs"
-
-#
-#~ msgid "/var directory"
-#~ msgstr "/var katalogs"
-
-#
-#~ msgid "Advanced Video Setup"
-#~ msgstr "Paplašinātā attēla iestatne"
-
-#
-# ???
-#~ msgid ""
-#~ "After the start wizard is completed, you need to protect single services. "
-#~ "Refer to your STB_BOX's manual on how to do that."
-#~ msgstr ""
-#~ "Pēc starta vednis ir pabeigts, jums ir jāaizsargā atsevišķi kanāli. "
-#~ "Meklējiet STB_BOX rokasgrāmatā kā to izdarīt."
-
-#
-#~ msgid "All Satellites"
-#~ msgstr "Visi pavadoņi"
-
-#
-#~ msgid ""
-#~ "Are you sure you want to restore\n"
-#~ "following backup:\n"
-#~ msgstr ""
-#~ "Vai tiešām vēlaties atjaunot\n"
-#~ "šo kopiju:\n"
-
-#
-#~ msgid ""
-#~ "Are you sure you want to restore your Enigma2 backup?\n"
-#~ "Enigma2 will restart after the restore"
-#~ msgstr ""
-#~ "Vai tiešām vēlaties atjaunot šo Enigma2 kopiju?\n"
-#~ "Enigma2 restartēsies pēc atjaunošanas"
-
-#
-#~ msgid "Backup"
-#~ msgstr "Dublējumkopija"
-
-#
-#~ msgid "Backup Location"
-#~ msgstr "Dublējumkopijas vieta"
-
-#
-#~ msgid "Backup Mode"
-#~ msgstr "Dublējumkopijas režīms"
-
-#
-#~ msgid "Backup done."
-#~ msgstr "Dublējumkopija izveidota."
-
-#
-#~ msgid ""
-#~ "By pressing the OK Button on your remote control, the info bar is being "
-#~ "displayed."
-#~ msgstr "Nospiežot OK uz tālvadības pults, tiks parādīta informācijas josla."
-
-#
-#~ msgid "CF Drive"
-#~ msgstr "CF lasītājs"
-
-#
-# ???
-#~ msgid ""
-#~ "Delete no more configured satellite\n"
-#~ "%s?"
-#~ msgstr ""
-#~ "Dzēst nekonfigurētu pavadoni\n"
-#~ " %s?"
-
-#
-#~ msgid ""
-#~ "Do you want to backup now?\n"
-#~ "After pressing OK, please wait!"
-#~ msgstr ""
-#~ "Vai vēlaties veidot dublējumkopiju?\n"
-#~ "Nospiediet OK un gaidiet!"
-
-#
-#~ msgid ""
-#~ "Do you want to enable the parental control feature on your GigaBlue HD "
-#~ "800 Solo?"
-#~ msgstr "Vai vēlaties aktivizēt vecāku kontroles iespēju?"
-
-#
-#~ msgid ""
-#~ "Do you want to update your STB_BOX?\n"
-#~ "After pressing OK, please wait!"
-#~ msgstr ""
-#~ "Vai vēlaties atjaunināt STB_BOX?\n"
-#~ "Nospiediet OK un gaidiet!"
-
-#
-#~ msgid "Do you want to view a tutorial?"
-#~ msgstr "Vai vēlaties skatīt pamācibu?"
-
-#
-#~ msgid "Done - Installed or upgraded %d packages"
-#~ msgstr "Pabeigts - uzstādītas vai atjauninātas %d pakotnes"
-
-#
-#~ msgid "Installing default sat lists... Please wait..."
-#~ msgstr "Uzstāda noklusētos pavadoņu sarakstus... Lūdzu gaidiet..."
-
-#
-#~ msgid "Installing defaults... Please wait..."
-#~ msgstr "Uzstāda noklusējumus... Lūdzu gaidiet..."
-
-#
-#~ msgid "Installing package content... Please wait..."
-#~ msgstr "Uzstāda pakotnes saturu... Lūdzu gaidiet..."
-
-#
-#~ msgid "LOF"
-#~ msgstr "LOF"
-
-#
-#~ msgid "LOF/H"
-#~ msgstr "LOF/H"
-
-#
-#~ msgid "LOF/L"
-#~ msgstr "LOF/L"
-
-#
-#~ msgid "Mode"
-#~ msgstr "Režīms"
-
-#
-#~ msgid ""
-#~ "No packages were upgraded yet. So you can check your network and try "
-#~ "again."
-#~ msgstr "Pakotnes netika atjauninātas. Pārbaudiet tīklu un mēģiniet vēlreiz."
-
-#
-#~ msgid "Please choose he package..."
-#~ msgstr "Lūdzu izvēlieties pakotni..."
-
-#
-#~ msgid "Please choose the default services lists you want to install."
-#~ msgstr ""
-#~ "Lūdzu izvēlieties noklusētos kanālu sarakstus, kurus vēlaties uzstādīt."
-
-#
-#~ msgid "Please press OK!"
-#~ msgstr "Lūdzu spiediet OK!"
-
-#
-#~ msgid "Refresh Rate"
-#~ msgstr "Atjaunināšanas ātrums"
-
-#
-#~ msgid "Restore running"
-#~ msgstr "Notiek atjaunošana"
-
-#
-#~ msgid "Scan QAM128"
-#~ msgstr "Meklēt QAM128"
-
-#
-#~ msgid "Scan QAM16"
-#~ msgstr "Meklēt QAM16"
-
-#
-#~ msgid "Scan QAM256"
-#~ msgstr "Meklēt QAM256"
-
-#
-#~ msgid "Scan QAM32"
-#~ msgstr "Meklēt QAM32"
-
-#
-#~ msgid "Scan QAM64"
-#~ msgstr "Meklēt QAM64"
-
-#
-#~ msgid "Scan SR6875"
-#~ msgstr "Meklēt SR6875"
-
-#
-#~ msgid "Scan SR6900"
-#~ msgstr "Meklēt SR6900"
-
-#
-#~ msgid "Scan band EU HYPER"
-#~ msgstr "Meklēt diapazonā EU HYPER "
-
-#
-#~ msgid "Scan band EU MID"
-#~ msgstr "Meklēt diapazonā EU MID"
-
-#
-#~ msgid "Scan band EU SUPER"
-#~ msgstr "Meklēt diapazonā EU SUPER"
-
-#
-#~ msgid "Scan band EU UHF IV"
-#~ msgstr "Meklēt diapazonā EU UHF IV"
-
-#
-#~ msgid "Scan band EU UHF V"
-#~ msgstr "Meklēt diapazonā EU UHF V"
-
-#
-#~ msgid "Scan band EU VHF I"
-#~ msgstr "Meklēt diapazonā EU VHF I"
-
-#
-#~ msgid "Scan band EU VHF III"
-#~ msgstr "Meklēt diapazonā EU VHF III"
-
-#
-#~ msgid "Scan band US HIGH"
-#~ msgstr "Meklēt diapazonā US HIGH"
-
-#
-#~ msgid "Scan band US HYPER"
-#~ msgstr "Meklēt diapazonā US HYPER"
-
-#
-#~ msgid "Scan band US LOW"
-#~ msgstr "Meklēt diapazonā US LOW"
-
-#
-#~ msgid "Scan band US MID"
-#~ msgstr "Meklēt diapazonā US MID"
-
-#
-#~ msgid "Scan band US SUPER"
-#~ msgstr "Meklēt diapazonā US SUPER"
-
-#
-#~ msgid "Set Voltage and 22KHz"
-#~ msgstr "Iestatīt spriegumu un 22 KHZ"
-
-#
-#~ msgid "Sorry MediaScanner is not installed!"
-#~ msgstr "Atvainojiet, MediaScanner nav uzstādīts!"
-
-#
-#~ msgid "Sorry no backups found!"
-#~ msgstr "Atvainojiet, dublējumkopijas nav atrastas!"
-
-#
-#~ msgid ""
-#~ "Sorry your Backup destination does not exist\n"
-#~ "\n"
-#~ "Please choose an other one."
-#~ msgstr ""
-#~ "Izvēlētais dublējumkopijas galamērķis neeksistē.\n"
-#~ "\n"
-#~ "Lūdzu izvēlieties citu."
-
-#
-#~ msgid ""
-#~ "Sorry your backup destination is not writeable.\n"
-#~ "Please choose an other one."
-#~ msgstr ""
-#~ "Izvēlētais dublējumkopijas galamērķis nav ierakstāms.\n"
-#~ "Lūdzu izvēlieties citu."
-
-#
-#~ msgid ""
-#~ "Thank you for using the wizard. Your STB_BOX is now ready to "
-#~ "use.\n"
-#~ "Please press OK to start using your STB_BOX."
-#~ msgstr ""
-#~ "Pateicamies par vedņa izmantošanu. Ierīce ir gatava lietošanai.\n"
-#~ "Lūdzu spiediet OK, lai sāktu lietot STB_BOX."
-
-#
-#~ msgid "The installation of the default services lists is finished."
-#~ msgstr "Noklusēto kanālu sarakstu uzstādīšana ir pabeigta."
-
-#
-#~ msgid ""
-#~ "The installation of the default settings is finished. You can now "
-#~ "continue configuring your STB_BOX by pressing the OK button "
-#~ "on the remote control."
-#~ msgstr ""
-#~ "Noklusēto iestatījumu uzstādīšana ir pabeigta. Tagad varat turpināt "
-#~ "Xtrend ET9 konfigurēšanu, spiežot OK taustiņu uz tālvadības pults."
-
-#
-#~ msgid "The package doesn't contain anything."
-#~ msgstr "Pakotne neko nesatur."
-
-#
-#~ msgid "There are no default services lists in your image."
-#~ msgstr "Imidžā nav noklusēto kanālu sarakstu."
-
-#
-#~ msgid "There are no default settings in your image."
-#~ msgstr "Imidžā nav noklusēto iestatījumu."
-
-#
-#~ msgid "This is step number 2."
-#~ msgstr "Šis ir solis numur 2."
-
-#
-#~ msgid "Tuner "
-#~ msgstr "Uztvērējs "
-
-#
-#~ msgid "USB Stick"
-#~ msgstr "USB atmiņa"
-
-#
-#~ msgid "Updates your STB_BOX's software"
-#~ msgstr "Atjaunina ierīces programmatūru"
-
-#
-#~ msgid "Updating finished. Here is the result:"
-#~ msgstr "Atjaunināšana pabeigta. Skatīt rezultātu:"
-
-#
-#~ msgid "Updating... Please wait... This can take some minutes..."
-#~ msgstr "Atjaunina... Lūdzu gaidiet... tas var aizņemt dažas minūtes..."
-
-#
-#~ msgid "Upgrade finished. Do you want to reboot your STB_BOX?"
-#~ msgstr "Atjaunināšana pabeigta. Vai vēlaties atsāknēt STB_BOX?"
-
-#
-#~ msgid "Upgrading STB_BOX... Please wait"
-#~ msgstr "Atjauno STB_BOX... Lūdzu gaidiet"
-
-#
-#~ msgid "Use Power Measurement"
-#~ msgstr "Lietot sprieguma mērīšanu"
-
-#
-#~ msgid ""
-#~ "Use the left and right buttons to change an option.\n"
-#~ "\n"
-#~ "Please set up tuner A"
-#~ msgstr ""
-#~ "Lietojiet labo un kreiso izvēles taustiņu, lai mainītu izvēli.\n"
-#~ "\n"
-#~ "Lūdzu iestatiet uztvērēju A"
-
-#
-# ???
-#~ msgid "Use usals for this sat"
-#~ msgstr "Lietot parastos iestatījumus šim pavadonim "
-
-#
-#~ msgid "Video Fine-Tuning Wizard"
-#~ msgstr "Precīzās atēla regulēšanas vednis"
-
-#
-#~ msgid "Video Output"
-#~ msgstr "Attēla izeja"
-
-#
-#~ msgid "Video Setup"
-#~ msgstr "Attēla iestatne"
-
-#
-#~ msgid "Video Wizard"
-#~ msgstr "Attēla vednis"
-
-#
-#~ msgid "Yes, view the tutorial"
-#~ msgstr "Jā, skatīt pamācību"
-
-#
-#~ msgid ""
-#~ "You can choose some default settings now. Please select the settings you "
-#~ "want to be installed."
-#~ msgstr ""
-#~ "Jūs tagad varat izvēlēties dažus noklusētos iestatījumus. Lūdzu "
-#~ "izvēlieties iestatījumus, kurus vēlaties uzstādīt."
-
-#
-#~ msgid "You can choose, what you want to install..."
-#~ msgstr "Jūs varat izvēlēties, ko vēlaties uzstādīti..."
-
-#
-#~ msgid "You chose not to install any default services lists."
-#~ msgstr "Jūs izvēlējāties neuzstādīt noklusētos kanālu sarakstus."
-
-#
-#~ msgid ""
-#~ "You chose not to install any default settings. You can however install "
-#~ "the default settings later in the settings menu."
-#~ msgstr ""
-#~ "Jūs izvēlējāties neuzstādīt noklusētos iestatījumus. Tomēr Jūs varat "
-#~ "uzstādīt noklusētos iestatījumus vēlāk iestatījumu izvēlnē."
-
-#
-#~ msgid ""
-#~ "You chose not to install anything. Please press OK finish the install "
-#~ "wizard."
-#~ msgstr ""
-#~ "Jūs izvēlējāties neko neuzstādīt. Lūdzu spiediet OK, lai pabeigtu "
-#~ "uzstādīšanas vedni."
-
-#
-#~ msgid "alphabetic sort"
-#~ msgstr "sakārtot pēc alfabēta"
-
-#
-#~ msgid ""
-#~ "are you sure you want to restore\n"
-#~ "following backup:\n"
-#~ msgstr ""
-#~ "vai tiešām vēlaties atjaunot\n"
-#~ "šī dublējumkopija:\n"
-
-#
-#~ msgid "enigma2 and network"
-#~ msgstr "enigma2 un tīkls"
-
-#
-#~ msgid "sort by date"
-#~ msgstr "kārtot pēc datuma"
-
-#
-#~ msgid ""
-#~ "your STB_BOX might be unusable now. Please consult the "
-#~ "manual for further assistance before rebooting your STB_BOX."
-#~ msgstr ""
-#~ "STB_BOX tagad var būt nelietojams. Lūdzu skatīt lietošanas "
-#~ "instrukciju tālākai palīdzībai, pirms atsāknējat STB_BOX."
