--- a/po/no.po
+++ b/po/no.po
@@ -5,16 +5,13 @@ msgstr ""
 "Project-Id-Version: enigma2\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2012-09-28 16:57+0100\n"
-"PO-Revision-Date: 2012-07-11 17:32+0100\n"
+"PO-Revision-Date: 2012-09-30 00:52-0000\n"
 "Last-Translator: Andy Blackburn <andyblac@o2.co.uk>\n"
 "Language-Team: none\n"
-"Language: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
-"X-Poedit-Language: Norwegian\n"
-"X-Poedit-Country: NORWAY\n"
 "X-Poedit-SourceCharset: iso-8859-15\n"
 
 #
@@ -7411,8 +7408,7 @@ msgid ""
 msgstr ""
 
 msgid ""
-"Thank you for using the wizard. Your STB_BOX is now ready for "
-"use.\n"
+"Thank you for using the wizard. Your STB_BOX is now ready for use.\n"
 "Press OK to start using your receiver."
 msgstr ""
 
@@ -7429,8 +7425,8 @@ msgstr ""
 #
 msgid ""
 "The DVD standard doesn't support H.264 (HDTV) video streams. Do you want to "
-"create a STB_BOX format data DVD (which will not play in stand-"
-"alone DVD players) instead?"
+"create a STB_BOX format data DVD (which will not play in stand-alone DVD "
+"players) instead?"
 msgstr ""
 
 msgid ""
@@ -7781,8 +7777,7 @@ msgstr ""
 
 msgid ""
 "This plugin creates a USB stick which can be used to update the firmware of "
-"your STB_BOX without the need for a network or WLAN "
-"connection.\n"
+"your STB_BOX without the need for a network or WLAN connection.\n"
 "First, a USB stick needs to be prepared so that it becomes bootable.\n"
 "In the next step, an NFI image file can be downloaded from the update server "
 "and saved on the USB stick.\n"
@@ -8741,9 +8736,8 @@ msgstr ""
 #
 msgid ""
 "Welcome to the Image upgrade wizard. The wizard will assist you in upgrading "
-"the firmware of your STB_BOX by providing a backup facility for "
-"your current settings and a short explanation of how to upgrade your "
-"firmware."
+"the firmware of your STB_BOX by providing a backup facility for your current "
+"settings and a short explanation of how to upgrade your firmware."
 msgstr ""
 "Velkommen til Image-Oppgraderings-Guiden. Guiden vil assistere deg i "
 "oppgradering av firmware ved å gi deg en backupmulighet. Du kan med denne "
@@ -8754,9 +8748,8 @@ msgstr ""
 msgid ""
 "Welcome.\n"
 "\n"
-"If you want to connect your STB_BOX to the Internet, this "
-"wizard will guide you through the basic network setup of your GigaBlue HD "
-"800 Solo.\n"
+"If you want to connect your STB_BOX to the Internet, this wizard will guide "
+"you through the basic network setup of your GigaBlue HD 800 Solo.\n"
 "\n"
 "Press OK to start configuring your network"
 msgstr ""
@@ -8878,8 +8871,7 @@ msgstr ""
 msgid ""
 "When you do a factory reset, you will lose ALL your configuration data\n"
 "(including bouquets, services, satellite data ...)\n"
-"After completion of factory reset, your STB_BOX will restart "
-"automatically!\n"
+"After completion of factory reset, your STB_BOX will restart automatically!\n"
 "\n"
 "Really do a factory reset?"
 msgstr ""
@@ -9110,24 +9102,24 @@ msgstr "Du må vente %s!"
 
 #
 msgid ""
-"You need a PC connected to your STB_BOX. If you need further "
-"instructions, please visit the website http://www.dm7025.de.\n"
-"Your STB_BOX will now be halted. After you have performed the "
-"update instructions from the website, your new firmware will ask you to "
-"restore your settings."
+"You need a PC connected to your STB_BOX. If you need further instructions, "
+"please visit the website http://www.dm7025.de.\n"
+"Your STB_BOX will now be halted. After you have performed the update "
+"instructions from the website, your new firmware will ask you to restore "
+"your settings."
 msgstr ""
 "Du trenger en PC koblet til din DB. Trenger du videre informasjonvennligst "
 "gå til Websiden http://www.dm7025.de.\n"
-"Din STB_BOX vil nå bli stoppet. Etter du har "
-"gjennomførtoppdaterings- instruksjonene fra websiden, vil din nye firmware "
-"spørre deg om å legg inn igjen innstillingene."
+"Din STB_BOX vil nå bli stoppet. Etter du har gjennomførtoppdaterings- "
+"instruksjonene fra websiden, vil din nye firmware spørre deg om å legg inn "
+"igjen innstillingene."
 
 msgid "You system does not support ext4"
 msgstr ""
 
 msgid ""
-"Your STB_BOX is not connected to the internet, please check "
-"your network settings and try again."
+"Your STB_BOX is not connected to the internet, please check your network "
+"settings and try again."
 msgstr ""
 
 #
@@ -9159,27 +9151,25 @@ msgstr "Din STB_BOX slår seg av. Vennligst vent..."
 
 #
 msgid ""
-"Your STB_BOX isn't connected to the internet properly. Please "
-"check it and try again."
+"Your STB_BOX isn't connected to the internet properly. Please check it and "
+"try again."
 msgstr ""
-"Din STB_BOX er ikke koblet til internet skikkelig. Vennligst "
-"sjekk dette og prøv igjen"
+"Din STB_BOX er ikke koblet til internet skikkelig. Vennligst sjekk dette og "
+"prøv igjen"
 
 msgid ""
-"Your STB_BOX might be unusable now. Please consult the manual "
-"for further assistance before rebooting your STB_BOX."
+"Your STB_BOX might be unusable now. Please consult the manual for further "
+"assistance before rebooting your STB_BOX."
 msgstr ""
 
 #, python-format
 msgid ""
-"Your STB_BOX will be restarted after the installation of "
-"service\n"
+"Your STB_BOX will be restarted after the installation of service\n"
 "Ready to install \"%s\" ?"
 msgstr ""
 
 msgid ""
-"Your STB_BOX will be restarted after the installation of "
-"service.\n"
+"Your STB_BOX will be restarted after the installation of service.\n"
 "\n"
 "Do you want to install now ?"
 msgstr ""
@@ -9197,8 +9187,8 @@ msgid ""
 "Your backup succeeded. We will now continue to explain the further upgrade "
 "process."
 msgstr ""
-"Din backup var OK. STB_BOXen vil nå fortelle deg den videre "
-"gangen i oppdaterings-prosessen."
+"Din backup var OK. STB_BOXen vil nå fortelle deg den videre gangen i "
+"oppdaterings-prosessen."
 
 #
 msgid ""
@@ -10930,451 +10920,3 @@ msgstr "zap"
 #
 msgid "zapped"
 msgstr "zapped"
-
-#
-#~ msgid "/usr/share/enigma2 directory"
-#~ msgstr "/usr/share/enigma2 folder"
-
-#
-#~ msgid "/var directory"
-#~ msgstr "/var folder"
-
-#
-#~ msgid "Advanced Video Setup"
-#~ msgstr "Avansert Video Oppsett"
-
-#
-#~ msgid ""
-#~ "After the start wizard is completed, you need to protect single services. "
-#~ "Refer to your STB_BOX's manual on how to do that."
-#~ msgstr ""
-#~ "Etter oppstartsguiden er ferdig, trenger du beskytte enkelte kanaler. Les "
-#~ "i manualen for din STB_BOX hvordan det gjøres."
-
-#
-#~ msgid "Ask before shutdown:"
-#~ msgstr "Spør før avstegning"
-
-#
-#~ msgid "Backup"
-#~ msgstr "Backup"
-
-#
-#~ msgid "Backup Location"
-#~ msgstr "Backup Lokasjon"
-
-#
-#~ msgid "Backup Mode"
-#~ msgstr "Backup Modus"
-
-#
-#~ msgid ""
-#~ "By pressing the OK Button on your remote control, the info bar is being "
-#~ "displayed."
-#~ msgstr "Ved å trykke OK på din fjernkontroll, vises infobaren."
-
-#
-#~ msgid "CF Drive"
-#~ msgstr "CF Disk"
-
-#
-#~ msgid ""
-#~ "Delete no more configured satellite\n"
-#~ "%s?"
-#~ msgstr "Slette satellit %s, som ikke er i bruk lenger?"
-
-#
-#~ msgid "Display Setup"
-#~ msgstr "Display Oppsett"
-
-#
-#~ msgid ""
-#~ "Do you want to backup now?\n"
-#~ "After pressing OK, please wait!"
-#~ msgstr ""
-#~ "Vil du ta backup nå?\n"
-#~ "Trykk OK og vennligst vent!"
-
-#
-#~ msgid ""
-#~ "Do you want to enable the parental control feature on your GigaBlue HD "
-#~ "800 Solo?"
-#~ msgstr "Vil du aktivere foreldrekontroll på STB_BOXen din?"
-
-#
-#~ msgid ""
-#~ "Do you want to update your STB_BOX?\n"
-#~ "After pressing OK, please wait!"
-#~ msgstr ""
-#~ "Vil du oppdatere din STB_BOX?\n"
-#~ "Etter å ha trykt OK, vennligst vent!"
-
-#
-#~ msgid "Do you want to view a tutorial?"
-#~ msgstr "Vil du se en veiledning?"
-
-#
-#~ msgid "Done - Installed or upgraded %d packages"
-#~ msgstr "Ferdig - Installerte eller oppgraderte %d pakker"
-
-#
-#~ msgid "Installing default sat lists... Please wait..."
-#~ msgstr "Installerer standard sat liste... Vennligst vent..."
-
-#
-#~ msgid "Installing defaults... Please wait..."
-#~ msgstr "Installerer standarder... Vennligst vent..."
-
-#
-#~ msgid "Installing package content... Please wait..."
-#~ msgstr "Installerer pakke innhold... Vennligst vent..."
-
-#
-#~ msgid "Keyboard Setup"
-#~ msgstr "Tastaturinstillinger"
-
-#
-#~ msgid "LOF"
-#~ msgstr "LOF"
-
-#
-#~ msgid "LOF/H"
-#~ msgstr "LOF/H"
-
-#
-#~ msgid "LOF/L"
-#~ msgstr "LOF/L"
-
-#
-#~ msgid "Mode"
-#~ msgstr "Modus"
-
-#
-#~ msgid ""
-#~ "No packages were upgraded yet. So you can check your network and try "
-#~ "again."
-#~ msgstr ""
-#~ "Ingen pakker opgraderet endda. Sjekk vennligst ditt nettverk og prøv "
-#~ "igjen."
-
-#
-#~ msgid "Please choose he package..."
-#~ msgstr "Vennligst velg pakke.."
-
-#
-#~ msgid "Please choose the default services lists you want to install."
-#~ msgstr "Vennligst velg standard tjeneste liste du vil installere."
-
-#
-#~ msgid "Please press OK!"
-#~ msgstr "Vennligst trykk OK!"
-
-#
-#~ msgid "Refresh Rate"
-#~ msgstr "Gjennoppfrisknings Rate"
-
-#
-#~ msgid "Sat / Dish Setup"
-#~ msgstr "Sat-/Parabolinstillinger"
-
-#
-#~ msgid "Scan QAM128"
-#~ msgstr "Søke QAM128"
-
-#
-#~ msgid "Scan QAM16"
-#~ msgstr "Søke QAM16"
-
-#
-#~ msgid "Scan QAM256"
-#~ msgstr "Søke QAM256"
-
-#
-#~ msgid "Scan QAM32"
-#~ msgstr "Søke QAM32"
-
-#
-#~ msgid "Scan QAM64"
-#~ msgstr "Søke QAM64"
-
-#
-#~ msgid "Scan SR6875"
-#~ msgstr "Søke SR6875"
-
-#
-#~ msgid "Scan SR6900"
-#~ msgstr "Søke SR6900"
-
-#
-#~ msgid "Scan band EU HYPER"
-#~ msgstr "Søke bånd EU HYPER"
-
-#
-#~ msgid "Scan band EU MID"
-#~ msgstr "Søke bånd EU MID"
-
-#
-#~ msgid "Scan band EU SUPER"
-#~ msgstr "Søke bånd EU SUPER"
-
-#
-#~ msgid "Scan band EU UHF IV"
-#~ msgstr "Søke bånd EU UHF IV"
-
-#
-#~ msgid "Scan band EU UHF V"
-#~ msgstr "Søke bånd EU UHF V"
-
-#
-#~ msgid "Scan band EU VHF I"
-#~ msgstr "Søke bånd EU VHF I"
-
-#
-#~ msgid "Scan band EU VHF III"
-#~ msgstr "Søke bånd EU VHF III"
-
-#
-#~ msgid "Scan band US HIGH"
-#~ msgstr "Søke bånd US HIGH"
-
-#
-#~ msgid "Scan band US HYPER"
-#~ msgstr "Søke bånd US HYPER"
-
-#
-#~ msgid "Scan band US LOW"
-#~ msgstr "Søke bånd US LOW"
-
-#
-#~ msgid "Scan band US MID"
-#~ msgstr "Søke bånd US MID"
-
-#
-#~ msgid "Scan band US SUPER"
-#~ msgstr "Søke bånd US SUPER"
-
-#
-#~ msgid "Service Searching"
-#~ msgstr "Kanalsøk"
-
-#
-#~ msgid "Shutdown STB_BOX after"
-#~ msgstr "Slå av STB_BOXen etter"
-
-#
-#~ msgid "Sleep timer action:"
-#~ msgstr "Sleep timer aksjon"
-
-#
-#~ msgid ""
-#~ "Sorry your Backup destination does not exist\n"
-#~ "\n"
-#~ "Please choose an other one."
-#~ msgstr ""
-#~ "Desverre, din backup destination eksisterer ikke\n"
-#~ "\n"
-#~ "Venligst velg en annen."
-
-#
-#~ msgid ""
-#~ "Thank you for using the wizard. Your STB_BOX is now ready to "
-#~ "use.\n"
-#~ "Please press OK to start using your STB_BOX."
-#~ msgstr ""
-#~ "Takk for at du brukte guiden. Din STB_BOX er nå klar til "
-#~ "bruk .\n"
-#~ "Vennligst trykk OK å begynne å bruke den."
-
-#
-#~ msgid "The installation of the default services lists is finished."
-#~ msgstr "Installasjonen av standard tjenesteliste er ferdig."
-
-#
-#~ msgid ""
-#~ "The installation of the default settings is finished. You can now "
-#~ "continue configuring your STB_BOX by pressing the OK button "
-#~ "on the remote control."
-#~ msgstr ""
-#~ "Installasjonen av standard innstillinger er ferdig. Du kan nå fortsette å "
-#~ "konfigurere din STB_BOX, ved å trykke OK knappen."
-
-#
-#~ msgid "The package doesn't contain anything."
-#~ msgstr "Pakken inneholder ingenting."
-
-#
-#~ msgid "There are no default services lists in your image."
-#~ msgstr "Det finnes ingen standard tjenesteliste i ditt image."
-
-#
-#~ msgid "There are no default settings in your image."
-#~ msgstr "Det finnes ingen standard innstillinger i ditt image."
-
-#
-#~ msgid "This is step number 2."
-#~ msgstr "Dette er steg nr.2"
-
-#
-#~ msgid ""
-#~ "This test checks whether your LAN Adapter is set up for automatic IP "
-#~ "Address configuration with DHCP.\n"
-#~ "If you get a \"disabled\" message:\n"
-#~ " - then your LAN Adapter is configured for manual IP Setup\n"
-#~ "- verify thay you have entered correct IP informations in the "
-#~ "AdapterSetup dialog.\n"
-#~ "If you get an \"enabeld\" message:\n"
-#~ "-verify that you have a configured and working DHCP Server in your "
-#~ "network."
-#~ msgstr ""
-#~ "Denne test sjekker om ditt LAN-adapter er satt opp med automatisk IP-"
-#~ "addresse via DHCP.\n"
-#~ "Hvis du får en \"deaktivert\" melding:\n"
-#~ "- så er ditt LAN-adapter satt opp med manuell IP-addresse\n"
-#~ "- verifiser at du har satt inn korrekt IP-informasjon i dialogen for "
-#~ "Adapterinnstallasjon.\n"
-#~ "Hvis du får en \"aktivert\" melding:\n"
-#~ "- verifiser at du har en konfigurert og fungerende DHCP server i "
-#~ "nettverket ditt."
-
-#
-#~ msgid "Tuner "
-#~ msgstr "Tuner "
-
-#
-#~ msgid "USB Stick"
-#~ msgstr "USB Stick"
-
-#
-#~ msgid "Updates your STB_BOX's software"
-#~ msgstr "Oppdaterer software på din mottager"
-
-#
-#~ msgid "Updating finished. Here is the result:"
-#~ msgstr "Oppdatering avsluttet. Her er resultatet:"
-
-#
-#~ msgid "Updating... Please wait... This can take some minutes..."
-#~ msgstr "Oppdaterer...Vennligst vent..Dette kan ta noen minutter "
-
-#
-#~ msgid "Upgrade finished. Do you want to reboot your STB_BOX?"
-#~ msgstr "Oppgradering er ferdig. Vil du restarte din STB_BOX?"
-
-#
-#~ msgid "Upgrading STB_BOX... Please wait"
-#~ msgstr "Oppgraderer STB_BOX... Vennligst vent"
-
-#
-#~ msgid "Use Power Measurement"
-#~ msgstr "Bruk Strøm Måling"
-
-#
-#~ msgid ""
-#~ "Use the left and right buttons to change an option.\n"
-#~ "\n"
-#~ "Please set up tuner A"
-#~ msgstr ""
-#~ "Bruk venstre og høyre knappene for å endre valg.\n"
-#~ "\n"
-#~ "Vennligst sett opp tuner A"
-
-#
-#~ msgid "Use usals for this sat"
-#~ msgstr "Bruk USALS for denne Sat"
-
-#
-#~ msgid "Video Fine-Tuning Wizard"
-#~ msgstr "Video Fininnstilling Guide"
-
-#
-#~ msgid "Video Output"
-#~ msgstr "Video Utgang"
-
-#
-#~ msgid "Video Setup"
-#~ msgstr "Video Oppsett"
-
-#
-#~ msgid "Video Wizard"
-#~ msgstr "Video Guide"
-
-#
-#~ msgid ""
-#~ "Welcome.\n"
-#~ "\n"
-#~ "This start wizard will guide you through the basic setup of your Xtrend "
-#~ "ET9.\n"
-#~ "Press the OK button on your remote control to move to the next step."
-#~ msgstr ""
-#~ "Velkommen.\n"
-#~ "\n"
-#~ "Denne Guiden vil hjelpe deg gjennom basis setup av din GigaBlue HD 800 "
-#~ "Solo.\n"
-#~ "Vennligst trykk OK på din fjernkontroll for å gå til neste steg."
-
-#
-#~ msgid "Yes, view the tutorial"
-#~ msgstr "Ja, vis guiden"
-
-#
-#~ msgid ""
-#~ "You can choose some default settings now. Please select the settings you "
-#~ "want to be installed."
-#~ msgstr ""
-#~ "Du kan velge standard innstillinger nå. Vennligst velg de du vil bruke."
-
-#
-#~ msgid "You can choose, what you want to install..."
-#~ msgstr "Du kan velge det du vil ha installert..."
-
-#
-#~ msgid "You chose not to install any default services lists."
-#~ msgstr "Du valgte ikke å installere noen standard tjenesteliste."
-
-#
-#~ msgid ""
-#~ "You chose not to install any default settings. You can however install "
-#~ "the default settings later in the settings menu."
-#~ msgstr ""
-#~ "Du valgte å ikke installere standard innstillinger. Men du kan legge dem "
-#~ "inn senere fra innstillinger menyen."
-
-#
-#~ msgid ""
-#~ "You chose not to install anything. Please press OK finish the install "
-#~ "wizard."
-#~ msgstr ""
-#~ "Du valgte å ikke installere noe. Vennligst trykk OK for å avslutte "
-#~ "installasjonsguiden."
-
-#
-#~ msgid "alphabetic sort"
-#~ msgstr "sorter alfabetisk"
-
-#
-#~ msgid ""
-#~ "are you sure you want to restore\n"
-#~ "following backup:\n"
-#~ msgstr ""
-#~ "Er du sikker på at du vil gjenopprette\n"
-#~ "følgende backup:\n"
-
-#
-#~ msgid "shutdown"
-#~ msgstr "slå av"
-
-#
-#~ msgid "sort by date"
-#~ msgstr "sorter på dato"
-
-#
-#~ msgid "standby"
-#~ msgstr "standby"
-
-#
-#~ msgid ""
-#~ "your STB_BOX might be unusable now. Please consult the "
-#~ "manual for further assistance before rebooting your STB_BOX."
-#~ msgstr ""
-#~ "din STB_BOX fungerer kanskje ikke nå. Vennligst les manualen "
-#~ "for hvordan du får hjelp før du starter om din STB_BOX."
