--- a/po/ro.po
+++ b/po/ro.po
@@ -8,11 +8,10 @@ msgstr ""
 "Project-Id-Version: tuxbox-enigma 0.0.1\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2012-09-28 16:57+0100\n"
-"PO-Revision-Date: 2012-09-14 19:10-0000\n"
+"PO-Revision-Date: 2012-09-30 00:52-0000\n"
 "Last-Translator: Andy Blackburn <andyblac@o2.co.uk>\n"
 "Language-Team: HDTV ROMANIA(superonic,costel_mbc,neutrin,otheitis,cipy_1982,"
 "neutrin,runcanion)\n"
-"Language: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -6547,8 +6546,7 @@ msgid ""
 msgstr ""
 
 msgid ""
-"Thank you for using the wizard. Your STB_BOX is now ready for "
-"use.\n"
+"Thank you for using the wizard. Your STB_BOX is now ready for use.\n"
 "Press OK to start using your receiver."
 msgstr ""
 
@@ -6564,8 +6562,8 @@ msgstr ""
 
 msgid ""
 "The DVD standard doesn't support H.264 (HDTV) video streams. Do you want to "
-"create a STB_BOX format data DVD (which will not play in stand-"
-"alone DVD players) instead?"
+"create a STB_BOX format data DVD (which will not play in stand-alone DVD "
+"players) instead?"
 msgstr ""
 "Standardul DVD nu suporta formatul video H.264 (HDTV). Doriti sacreati un "
 "DVD in format IPBOX (Care nu va putea fi vizionat intr-un DVD player "
@@ -6909,8 +6907,7 @@ msgstr ""
 
 msgid ""
 "This plugin creates a USB stick which can be used to update the firmware of "
-"your STB_BOX without the need for a network or WLAN "
-"connection.\n"
+"your STB_BOX without the need for a network or WLAN connection.\n"
 "First, a USB stick needs to be prepared so that it becomes bootable.\n"
 "In the next step, an NFI image file can be downloaded from the update server "
 "and saved on the USB stick.\n"
@@ -7747,9 +7744,8 @@ msgstr ""
 
 msgid ""
 "Welcome to the Image upgrade wizard. The wizard will assist you in upgrading "
-"the firmware of your STB_BOX by providing a backup facility for "
-"your current settings and a short explanation of how to upgrade your "
-"firmware."
+"the firmware of your STB_BOX by providing a backup facility for your current "
+"settings and a short explanation of how to upgrade your firmware."
 msgstr ""
 "Bine ai venit la expertul de upgradare Imagine. Expertul va asista la "
 "upgradarea firmware-lui Boxului tau prin promovarea facilitatii de a salva "
@@ -7758,9 +7754,8 @@ msgstr ""
 msgid ""
 "Welcome.\n"
 "\n"
-"If you want to connect your STB_BOX to the Internet, this "
-"wizard will guide you through the basic network setup of your GigaBlue HD "
-"800 Solo.\n"
+"If you want to connect your STB_BOX to the Internet, this wizard will guide "
+"you through the basic network setup of your GigaBlue HD 800 Solo.\n"
 "\n"
 "Press OK to start configuring your network"
 msgstr ""
@@ -7878,8 +7873,7 @@ msgstr ""
 msgid ""
 "When you do a factory reset, you will lose ALL your configuration data\n"
 "(including bouquets, services, satellite data ...)\n"
-"After completion of factory reset, your STB_BOX will restart "
-"automatically!\n"
+"After completion of factory reset, your STB_BOX will restart automatically!\n"
 "\n"
 "Really do a factory reset?"
 msgstr ""
@@ -8091,11 +8085,11 @@ msgid "You have to wait %s!"
 msgstr "Ai de asteptat %s!"
 
 msgid ""
-"You need a PC connected to your STB_BOX. If you need further "
-"instructions, please visit the website http://www.dm7025.de.\n"
-"Your STB_BOX will now be halted. After you have performed the "
-"update instructions from the website, your new firmware will ask you to "
-"restore your settings."
+"You need a PC connected to your STB_BOX. If you need further instructions, "
+"please visit the website http://www.dm7025.de.\n"
+"Your STB_BOX will now be halted. After you have performed the update "
+"instructions from the website, your new firmware will ask you to restore "
+"your settings."
 msgstr ""
 "Trebuie sa ai un PC conectat la Ipbox. Daca ai nevoie de instructiuni "
 "suplimentare,acceseaza site-ul http://www.dm7025.de.\n"
@@ -8106,8 +8100,8 @@ msgid "You system does not support ext4"
 msgstr ""
 
 msgid ""
-"Your STB_BOX is not connected to the internet, please check "
-"your network settings and try again."
+"Your STB_BOX is not connected to the internet, please check your network "
+"settings and try again."
 msgstr ""
 
 msgid ""
@@ -8135,25 +8129,23 @@ msgid "Your STB_BOX is shutting down. Please stand by..."
 msgstr "Dreamboxul este in curs de stingere. Asteapta..."
 
 msgid ""
-"Your STB_BOX isn't connected to the internet properly. Please "
-"check it and try again."
+"Your STB_BOX isn't connected to the internet properly. Please check it and "
+"try again."
 msgstr "Dreamboxul nu este conectat la internet. Verifica si incearca din nou."
 
 msgid ""
-"Your STB_BOX might be unusable now. Please consult the manual "
-"for further assistance before rebooting your STB_BOX."
+"Your STB_BOX might be unusable now. Please consult the manual for further "
+"assistance before rebooting your STB_BOX."
 msgstr ""
 
 #, python-format
 msgid ""
-"Your STB_BOX will be restarted after the installation of "
-"service\n"
+"Your STB_BOX will be restarted after the installation of service\n"
 "Ready to install \"%s\" ?"
 msgstr ""
 
 msgid ""
-"Your STB_BOX will be restarted after the installation of "
-"service.\n"
+"Your STB_BOX will be restarted after the installation of service.\n"
 "\n"
 "Do you want to install now ?"
 msgstr ""
@@ -9636,373 +9628,3 @@ msgstr "zap"
 
 msgid "zapped"
 msgstr "zapped"
-
-#~ msgid "/usr/share/enigma2 directory"
-#~ msgstr "/usr/share/enigma2 director"
-
-#~ msgid "/var directory"
-#~ msgstr "/var director"
-
-#~ msgid "Advanced Video Setup"
-#~ msgstr "Setarile video avansate"
-
-#~ msgid ""
-#~ "After the start wizard is completed, you need to protect single services. "
-#~ "Refer to your STB_BOX's manual on how to do that."
-#~ msgstr ""
-#~ "Dupa completare start wizard,trebuie sa ptotejezi serviciile unice. "
-#~ "Cisteste pe manual lui Ipbox cum sa faci asta."
-
-#~ msgid "All Satellites"
-#~ msgstr "Toti Sateliti"
-
-#~ msgid ""
-#~ "Are you sure you want to delete\n"
-#~ "following backup:\n"
-#~ msgstr ""
-#~ "Esti sigur ca vrei sa stergi\n"
-#~ "urmarire backup:\n"
-
-#~ msgid ""
-#~ "Are you sure you want to restore\n"
-#~ "following backup:\n"
-#~ msgstr ""
-#~ "Esti sigur ca vrei sa restaurezi\n"
-#~ "Urmareste backup-ul:\n"
-
-#~ msgid ""
-#~ "Are you sure you want to restore your Enigma2 backup?\n"
-#~ "Enigma2 will restart after the restore"
-#~ msgstr ""
-#~ "Esti sigur ca vrei sa restaurezi backup-ul Enigma2?\n"
-#~ "Enigma2 va reporni dupa restaurare"
-
-#~ msgid "Backup"
-#~ msgstr "Backup"
-
-#~ msgid "Backup Location"
-#~ msgstr "Locatia Backup"
-
-#~ msgid "Backup Mode"
-#~ msgstr "Backup Mode"
-
-#~ msgid "Backup done."
-#~ msgstr "Backup terminat."
-
-#~ msgid ""
-#~ "By pressing the OK Button on your remote control, the info bar is being "
-#~ "displayed."
-#~ msgstr ""
-#~ "Apasand pe butonul OK de pe telecomanda, bara de informatiise afiseaza"
-
-#~ msgid "CF Drive"
-#~ msgstr "Compact Flash"
-
-#~ msgid ""
-#~ "Delete no more configured satellite\n"
-#~ "%s?"
-#~ msgstr ""
-#~ "Doriti stergerea satelitului\n"
-#~ "%s?"
-
-#~ msgid ""
-#~ "Do you want to backup now?\n"
-#~ "After pressing OK, please wait!"
-#~ msgstr ""
-#~ "Doriti crearea copiei de siguranta acum?\n"
-#~ "Dupa apasarea butonului OK sunteti rugat sa asteptati!"
-
-#~ msgid ""
-#~ "Do you want to enable the parental control feature on your GigaBlue HD "
-#~ "800 Solo?"
-#~ msgstr "Doriti activarea controlului parental?"
-
-#~ msgid ""
-#~ "Do you want to update your STB_BOX?\n"
-#~ "After pressing OK, please wait!"
-#~ msgstr ""
-#~ "Doriti sa actualizati IPBOX dvs?\n"
-#~ "Va rog sa asteptati dupa ce apasati OK!"
-
-#~ msgid "Do you want to view a tutorial?"
-#~ msgstr "Doriti sa urmariti un tutorial?"
-
-#~ msgid "Done - Installed or upgraded %d packages"
-#~ msgstr "S-a finalizat instalarea sau actualizarea a %d pachete"
-
-#~ msgid "General AC3 Delay"
-#~ msgstr "Intarziere AC3 generala"
-
-#~ msgid "General PCM Delay"
-#~ msgstr "Intarziere PCM generala"
-
-#~ msgid "Install settings, skins, software..."
-#~ msgstr "Instalare setari, skin-uri, software..."
-
-#~ msgid "Installing default sat lists... Please wait..."
-#~ msgstr "Instaleaza listele implicite cu sateliti...Va rugam asteptati..."
-
-#~ msgid "Installing defaults... Please wait..."
-#~ msgstr "Instaleaza setarile implicite...Va rugam asteptati..."
-
-#~ msgid "Installing package content... Please wait..."
-#~ msgstr "Instaleaza continutul pachetului...Va rugam asteptati..."
-
-#~ msgid "LOF"
-#~ msgstr "LOF"
-
-#~ msgid "LOF/H"
-#~ msgstr "LOF/H"
-
-#~ msgid "LOF/L"
-#~ msgstr "LOF/L"
-
-#~ msgid "Mode"
-#~ msgstr "Mod"
-
-#~ msgid ""
-#~ "No packages were upgraded yet. So you can check your network and try "
-#~ "again."
-#~ msgstr ""
-#~ "Niciun pachet nu a fost actualizat inca. Verificati reteaua si incercati "
-#~ "din nou."
-
-#~ msgid "Please choose he package..."
-#~ msgstr "Va rugam alegeti pachetul..."
-
-#~ msgid "Please choose the default services lists you want to install."
-#~ msgstr ""
-#~ "Va rugam alegeti listele de servicii implicite pe care doriti sa le "
-#~ "instalati"
-
-#~ msgid "Please press OK!"
-#~ msgstr "Va rugam apasati OK!"
-
-#~ msgid "Refresh Rate"
-#~ msgstr "Rata de reimprospatare"
-
-#~ msgid "Restore running"
-#~ msgstr "Restabilire setari in curs"
-
-#~ msgid "Scan QAM128"
-#~ msgstr "Scanare QAM128"
-
-#~ msgid "Scan QAM16"
-#~ msgstr "Scanare QAM16"
-
-#~ msgid "Scan QAM256"
-#~ msgstr "scanare QAM256"
-
-#~ msgid "Scan QAM32"
-#~ msgstr "Scanare QAM32"
-
-#~ msgid "Scan QAM64"
-#~ msgstr "Scanare QAM64"
-
-#~ msgid "Scan SR6875"
-#~ msgstr "Scanare SR6875"
-
-#~ msgid "Scan SR6900"
-#~ msgstr "sCANARE SR6900"
-
-#~ msgid "Scan band EU HYPER"
-#~ msgstr "Scanare banda EU HYPER"
-
-#~ msgid "Scan band EU MID"
-#~ msgstr "Scanare banda EU MID"
-
-#~ msgid "Scan band EU SUPER"
-#~ msgstr "Scanare banda EU SUPER"
-
-#~ msgid "Scan band EU UHF IV"
-#~ msgstr "Scanare banda EU UHF IV"
-
-#~ msgid "Scan band EU UHF V"
-#~ msgstr "Scanare banda EU UHF V"
-
-#~ msgid "Scan band EU VHF I"
-#~ msgstr "Scanare banda EU VHF I"
-
-#~ msgid "Scan band EU VHF III"
-#~ msgstr "Scanare banda EU VHF III"
-
-#~ msgid "Scan band US HIGH"
-#~ msgstr "Scanare banda US HIGH"
-
-#~ msgid "Scan band US HYPER"
-#~ msgstr "Scanare banda US HYPER"
-
-#~ msgid "Scan band US LOW"
-#~ msgstr "Scanare banda US LOW"
-
-#~ msgid "Scan band US MID"
-#~ msgstr "Scanare anda US MID"
-
-#~ msgid "Scan band US SUPER"
-#~ msgstr "Scanare banda US SUPER"
-
-#~ msgid "Set Voltage and 22KHz"
-#~ msgstr "Setare Voltaj si 22KHz"
-
-#~ msgid "Sorry MediaScanner is not installed!"
-#~ msgstr "MediaScanner nu este instalat!"
-
-#~ msgid "Sorry no backups found!"
-#~ msgstr "Nu au fost gasite fisiere backup!"
-
-#~ msgid ""
-#~ "Sorry your Backup destination does not exist\n"
-#~ "\n"
-#~ "Please choose an other one."
-#~ msgstr ""
-#~ "Destinatia aleasa pentru fisierele backup nu exista\n"
-#~ "\n"
-#~ "Va rugam alegeti alta destinatie."
-
-#~ msgid ""
-#~ "Sorry your backup destination is not writeable.\n"
-#~ "Please choose an other one."
-#~ msgstr ""
-#~ "Destinatia aleasa pentru fisierele backup nu poate fi creata.\n"
-#~ "Va rugam alegeti alta destinatie."
-
-#~ msgid "Sorry, no Details available!"
-#~ msgstr "Detaliile nu sunt disponibile!"
-
-#~ msgid ""
-#~ "Sorry, your backup destination is not writeable.\n"
-#~ "\n"
-#~ "Please choose another one."
-#~ msgstr ""
-#~ "Destinatia aleasa pentru fisierele backup nu poate fi creata.\n"
-#~ "\n"
-#~ "Va rugam alegeti alta destinatie."
-
-#~ msgid "The installation of the default services lists is finished."
-#~ msgstr "Instalarea serviciilor implicite este incheiata."
-
-#~ msgid ""
-#~ "The installation of the default settings is finished. You can now "
-#~ "continue configuring your STB_BOX by pressing the OK button "
-#~ "on the remote control."
-#~ msgstr ""
-#~ "Instalarea setarilor implicite este incheiata. Acum puteti continuasa "
-#~ "configurati STB_BOX apasand tasta OK de pe telecomanda."
-
-#~ msgid "The package doesn't contain anything."
-#~ msgstr "Pachetul nu contine nimic."
-
-#~ msgid "There are no default services lists in your image."
-#~ msgstr "Nu exista liste cu servicii implicite in imaginea dumneavoastra"
-
-#~ msgid "There are no default settings in your image."
-#~ msgstr "Nu exista setari implicite in imaginea dumneavoastra."
-
-#~ msgid "There was an error downloading the packetlist. Please try again."
-#~ msgstr ""
-#~ "A intervenit o eroare in timpul descarcarii listei. Va rugam incercati "
-#~ "din nou."
-
-#~ msgid "This is step number 2."
-#~ msgstr "Acesta este pasul numarul 2"
-
-#~ msgid "Tuner "
-#~ msgstr "Tuner"
-
-#~ msgid "USB Stick"
-#~ msgstr "USB Stick"
-
-#~ msgid "Updates your STB_BOX's software"
-#~ msgstr "Updateaza softul receiverului"
-
-#~ msgid "Updating finished. Here is the result:"
-#~ msgstr "Updatare terminata. Uite aici rezultatul:"
-
-#~ msgid "Updating... Please wait... This can take some minutes..."
-#~ msgstr "Updatare....Te rugam asteapta.... Poate dura cateva minute"
-
-#~ msgid "Upgrade finished. Do you want to reboot your STB_BOX?"
-#~ msgstr "Upgrade terminat. Vrei sa restartezu Dreamboxul tau?"
-
-#~ msgid "Upgrading STB_BOX... Please wait"
-#~ msgstr "pgradare STB_BOX... Te rugam asteapta"
-
-#~ msgid "Use Power Measurement"
-#~ msgstr "Foloseste Masurarea Energiei"
-
-#~ msgid ""
-#~ "Use the left and right buttons to change an option.\n"
-#~ "\n"
-#~ "Please set up tuner A"
-#~ msgstr ""
-#~ "Foloseste butoanele dreapta-stanga pentru a schimba optiunile.\n"
-#~ "\n"
-#~ "Please set up tuner A"
-
-#~ msgid "Use usals for this sat"
-#~ msgstr "Foloseste usals pentru acest satelit"
-
-#~ msgid "Video Fine-Tuning Wizard"
-#~ msgstr "Expert acord fin video"
-
-#~ msgid "Video Output"
-#~ msgstr "Iesire video"
-
-#~ msgid "Video Setup"
-#~ msgstr "Video Setup"
-
-#~ msgid "Video Wizard"
-#~ msgstr "Expert Video"
-
-#~ msgid "Yes, view the tutorial"
-#~ msgstr "Da, vezi tutorial"
-
-#~ msgid ""
-#~ "You can choose some default settings now. Please select the settings you "
-#~ "want to be installed."
-#~ msgstr ""
-#~ "Poti alege niste setari default acum.Te rog alege setraile pe carele vrei "
-#~ "instalate."
-
-#~ msgid "You can choose, what you want to install..."
-#~ msgstr "Poti alege, ce vrei sa instalezi..."
-
-#~ msgid "You chose not to install any default services lists."
-#~ msgstr "Ai ales sa nu instalezi liste de servicii default."
-
-#~ msgid ""
-#~ "You chose not to install any default settings. You can however install "
-#~ "the default settings later in the settings menu."
-#~ msgstr ""
-#~ "Ai ales sa nu instalezi setari default. Poti totusi sa instalezi setari "
-#~ "default ulterior in meniul setari."
-
-#~ msgid ""
-#~ "You chose not to install anything. Please press OK finish the install "
-#~ "wizard."
-#~ msgstr ""
-#~ "Ai ales sa nu instalezi nimic. Te rog apasa OK pentru inchiderea "
-#~ "expertului de instalare."
-
-#~ msgid "alphabetic sort"
-#~ msgstr "sortare alfabetica"
-
-#~ msgid ""
-#~ "are you sure you want to restore\n"
-#~ "following backup:\n"
-#~ msgstr ""
-#~ "esti sigur ca vrei restore\n"
-#~ "dupa backup:\n"
-
-#~ msgid "enigma2 and network"
-#~ msgstr "enigma2 si retea"
-
-#~ msgid "sort by date"
-#~ msgstr "sorteaza dupa data"
-
-#~ msgid ""
-#~ "your STB_BOX might be unusable now. Please consult the "
-#~ "manual for further assistance before rebooting your STB_BOX."
-#~ msgstr ""
-#~ "dreamboxul poate fi inutilizabil acum. Te rog sa consulti manualul pentru "
-#~ "asistenta inainte de reboot la STB_BOX."
